--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -27,7 +27,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 
 ====Translations====
 {{trans-top|fair-haired person}}
-* Bulgarian: {{t|bg|блонди́н|m}}|tr=blondín, {{t|bg|блонди́нка|f}}|tr=blondínka
+* Bulgarian: {{t|bg|блонди́н|m}}, {{t|bg|блонди́нка|f}}
 * Catalan: {{t+|ca|ros|m}}<!--(only hair, not skin)-->
 * Chinese:
 *: Mandarin: {{t+|cmn|金髮}}, {{t+|cmn|金发|tr=jīnfà}} {{qualifier|blond hair}}
@@ -39,7 +39,6 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * French: {{t+|fr|blond|m}}, {{t+|fr|blonde|f}}
 * Georgian: {{t|ka|ქერა}}
 * German: {{t|de|Blonder|m}}, {{t|de|Blondin|m}} {{qualifier|obsolete}}, {{t|de|Blonde|f}}, {{t+|de|Blondine|f}}, {{t|de|Blondhaariger|m}}, {{t|de|Blondhaarige|f}}, {{t|de|Flachshaariger|m}}, {{t|de|Flachshaarige|f}}, {{qualifier|♂♀}} {{t|de|Blondkopf|m}}, {{qualifier|♂♀}} {{t|de|Blondschopf|m}}
-* Greek: {{t+|el|ξανθός|m}}, {{t+|el|ξανθή|f}}
 * Hebrew: {{t|he|בְּלוֹנְדִּינִי|m|tr=blondíni}}, {{t|he|בְּלוֹנְדִּינִית|f|tr=blondínit}}
 * Hindi: {{t|hi|सुनहरे बालोंवाला}}
 * Hungarian: {{t+|hu|szőke}}
@@ -51,15 +50,14 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Korean: {{t|ko|금발인}}, {{t+|ko|금발}} {{qualifier|blond hair}}
 * Latin: {{t+|la|flāvus|m}}, {{t|la|flāvicomus|m}}, {{t+|la|fulvus|m}}
 * Latvian: {{t|lv|gaišmatis|m}}, {{t|lv|gaišmate|f}}, {{t|lv|blondīns|m}}, {{t|lv|blondīne|f}}
-* Macedonian: {{t|mk|ру́сокос|m}}|tr=rúsokos, {{t|mk|плав|m}}, {{t|mk|русо́коса|f}}|tr=rusókosa, {{t|mk|пла́ва|f}}|tr=pláva
+* Macedonian: {{t|mk|ру́сокос|m}}, {{t|mk|плав|m}}, {{t|mk|русо́коса|f}}, {{t|mk|пла́ва|f}}
 * Norwegian: {{t|no|lys(håret)}}, blond, {{t+|no|blondine}}
 * Persian: {{t+|fa|بلوند|tr=blond}}
 * Polish: {{t+|pl|blondyn|m}}, {{t+|pl|blondynka|f}}
 * Portuguese: {{t+|pt|loiro|m}}, {{t+|pt|louro|m}}, {{t+|pt|loira|m}}, {{t+|pt|loura|f}}
-* Punjabi: {{t|pa|ਕੱਕਾ|m}}|tr=kakkā
+* Punjabi: {{t|pa|ਕੱਕਾ|m}}
 * Romanian: {{t+|ro|blondă}}
 * Russian: {{t+|ru|блонди́н|m}}, {{t+|ru|блонди́нка|f}}
-* Scottish Gaelic: {{t|gd|bàn}}, {{t|gd|fionn}}
 * Spanish: {{t+|es|rubio|m}}, {{t|es|canche|m}} {{qualifier|Guatemala}}, {{t|es|catire|m}} {{qualifier|Venezuela}}, {{t+|es|chele|m}} {{qualifier|El Salvador|Honduras|Nicaragua}}, {{t+|es|choco|m}} {{qualifier|Bolivia}}, {{t|es|fulo|m}} {{qualifier|Panama}}, {{t+|es|gringo|m}} {{qualifier|Peru}}, {{t+|es|güero|m}} {{qualifier|Mexico}}, {{t+|es|macho|m}} {{qualifier|Costa Rica}}, {{t+|es|mono|m}} {{qualifier|Colombia}}, {{t+|es|rucio|m}} {{qualifier|Chile}}, {{t|es|suco|m}} {{qualifier|Ecuador}}
 * Swedish: {{t+|sv|blondin|c}}
 * Tagalog: {{t|tl|rubyo}}, {{t|tl|rubya}}
@@ -114,16 +112,18 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Finnish: {{t+|fi|vaalea}}
 * French: {{t+|fr|blond|m}}
 * German: {{t+|de|blond}}, {{t+|de|hell}}
+* Greek: {{t+|el|ξανθός}}
 * Ido: {{t+|io|blonda}}
 * Irish: {{t|ga|fionn}}
 {{trans-mid}}
 * Japanese: {{t|ja|金髪|tr=きんぱつの, kinpatsu-no|alt=金髪の}}
 * Korean: {{t+|ko|금발|tr=geumbar-ui|alt=금발의}}
 * Latvian: {{t|lv|blonds}}
-* Macedonian: {{t|mk|рус|f}}|tr=rus, {{t|mk|плав|f}}|tr=plav
+* Macedonian: {{t|mk|рус|f}}, {{t|mk|плав|f}}
 * Norman: {{t|nrf|bliond}}
 * Portuguese: {{t+|pt|loiro}}, {{t+|pt|louro}}
 * Russian: {{t+|ru|све́тлый}}, {{t+|ru|ру́сый}}
+* Scottish Gaelic: {{t|gd|bàn}}, {{t|gd|fionn}}
 * Spanish: {{t+|es|rubio}}
 * Swedish: {{t+|sv|blond}}
 * Tagalog: {{t|tl|buhuk-mais}}
@@ -146,7 +146,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 {{trans-mid}}
 * Latin: {{t+|la|flāvus|m}}
 * Latvian: {{t|lv|gaišmatains}}, {{t|lv|blonds}}
-* Macedonian: {{t|mk|све́тол|m}}|tr=svétol, {{t|mk|бе́лолик|m}}|tr=bélolik, {{t|mk|све́тла|f}}|tr=svétla, {{t|mk|бело́лика|f}}|tr=belólika
+* Macedonian: {{t|mk|све́тол|m}}, {{t|mk|бе́лолик|m}}, {{t|mk|све́тла|f}}, {{t|mk|бело́лика|f}}
 * Mongolian: {{t-needed|mn}}
 * Persian: {{t+|fa|بور|tr=bur}}
 * Portuguese: {{t+|pt|loiro}}, {{t+|pt|louro}}
