--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|ang|en}} {{m|ang|þunor}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*þunraz}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*(s)ten-}}, {{m|ine-pro|*(s)tenh₂-||to thunder}}. Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates include {{cog|fy|tonger}}, {{cog|nl|donder}}, {{cog|de|Donner}}, {{cog|non|Þōrr}}, {{cog|da|torden}}. Other cognates include {{cog|fa|تندر|tr=tondar}}, {{cog|la|tonō}}, {{m|la|detonō}}, {{cog|grc|στένω}}, {{m|grc|στενάζω}}, {{m|grc|στόνος}}, {{m|grc|Στέντωρ}}, {{cog|ga|torann}}, {{cog|cy|taran}}, {{cog|cel-gau|Taranis}}.
+From {{inh|en|ang|þunor}}, from {{inh|en|gem-pro|*þunraz}}, from {{der|en|ine-pro|*(s)ten-}}, {{m|ine-pro|*(s)tenh₂-||to thunder}}. Compare {{m|en|astound}}, {{m|en|astonish}}, {{m|en|stun}}. Germanic cognates include {{cog|fy|tonger}}, {{cog|nl|donder}}, {{cog|de|Donner}}, {{cog|non|Þórr}} ({{cog|en|Thor}}), {{cog|da|torden}}. Other cognates include {{cog|fa|تندر|tr=tondar}}, {{cog|la|tonō}}, {{m|la|detonō}}, {{cog|grc|στένω}}, {{m|grc|στενάζω}}, {{m|grc|στόνος}}, {{m|grc|Στέντωρ}}, {{cog|ga|torann}}, {{cog|cy|taran}}, {{cog|cel-gau|Taranis}}.
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈθʌn.də/|lang=en}}
