--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -317,6 +317,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * Esperanto: {{t|eo|roli}}
 * Finnish: {{t+|fi|näytellä}}
 * French: {{t+|fr|jouer}}, {{t+|fr|interpréter}}
+* Galician: {{t+|gl|actuar}}
 * German: {{t+|de|spielen}}
 * Greek: {{t+|el|παίζω}}
 * Hebrew: {{t+|he|שיחק|tr=sikhék}}
