New verb and noun defs <cut#47010103>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -141,6 +141,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 # {{lb|en|golf}} In a strokeplay competition, the early elimination of those players who have not then attained a preannounced score, so that the rest of the competition is less pressed for time and more entertaining for spectators.
 # {{lb|en|theatre}} A passage omitted or to be omitted from a play.
 #: ''The [[director]] asked the [[cast]] to note down the following '''cuts'''.''
+# {{lb|en|cinema}} A particular version or [[edit]] of a film.
 # The act or right of dividing a deck of playing cards.
 #: ''The player next to the dealer makes a '''cut''' by placing the bottom half on top.''
 # The manner or style a garment etc. is fashioned in.
@@ -415,6 +416,7 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 ##: {{ux|en|After the incident at the dinner party, people started to '''cut''' him on the street.}}
 # {{lb|en|intransitive|cinema|audio|usually as imperative}} To [[cease]] [[record]]ing activities.
 #: {{ux|en|After the actors read their lines, the director yelled, "'''Cut'''!"}}
+# {{lb|en|transitive|film}} To [[edit]] a film by selecting [[takes]] from original [[footage]].
 # {{lb|en|transitive|computing}} To [[remove]] and place in [[memory]] for later use.
 #: {{ux|en|Select the text, '''cut''' it, and then paste it in the other application.}}
 # {{lb|en|intransitive}} To [[enter]] a [[queue]] in the wrong place.
