/* Readings */ {{ja-readings}} update <側#47020836>

--- a/en/側/側.11140.wikitext
+++ b/en/側/側.11140.wikitext
@@ -49,7 +49,11 @@
 {{ja-kanji|grade=4|rs=人09}}
 
 ====Readings====
-{{ja-readings|goon=しき|kanon=そく|kun=がわ-, かわ-, そば-}}
+{{ja-readings
+|goon=しき
+|kanon=そく
+|kun=がわ-, かわ-, そば-
+}}
 
 ====Related terms====
 * {{ja-r|側か|ほのか}}
