--- a/en/旺/旺.16930.wikitext
+++ b/en/旺/旺.16930.wikitext
@@ -58,7 +58,10 @@
 # [[simplified]] from of [[曜]]
 
 ====Readings====
-* {{ja-readings|on=[[おう]] (ō)|kun=[[さかん]] (sakan)}}
+{{ja-readings
+|on=おう
+|kun=さか-ん
+}}
 
 ----
 
