--- a/en/倹/倹.11078.wikitext
+++ b/en/倹/倹.11078.wikitext
@@ -22,7 +22,11 @@
 # {{defn|lang=ja|sort=人08}}
 
 ====Readings====
-* {{ja-readings|goon=[[げん]] (gen) {{non-joyo-reading}}|kanon=[[けん]] (ken)|kun=[[つずまやか]] (tsuzumayaka)}}
+{{ja-readings
+|goon=げん
+|kanon=けん
+|kun=つずま-やか
+}}
 
 ----
 
