/* Readings */ {{ja-readings}} update <坂#47026629>

--- a/en/坂/坂.12997.wikitext
+++ b/en/坂/坂.12997.wikitext
@@ -28,7 +28,12 @@
 # {{alternative form of|阪|lang=ja}}
 
 ====Readings====
-* {{ja-readings|goon=[[べん]] (ben) {{non-joyo-reading}}, [[ほん]] (hon) {{non-joyo-reading}}|kanon=[[はん]] (han)|kanyoon=[[ばん]] (ban) {{non-joyo-reading}}|kun=[[さか]] (saka)}}
+{{ja-readings
+|goon=べん, ほん
+|kanon=はん
+|kanyoon=ばん
+|kun=さか-
+}}
 
 ===Alternative forms===
 {{ja-kanjitab|さか|yomi=k}}
