/* Readings */ {{ja-readings}} update <均#47026630>

--- a/en/均/均.13002.wikitext
+++ b/en/均/均.13002.wikitext
@@ -54,11 +54,12 @@
 
 ====Readings====
 {{ja-readings
-|goon=[[うん]] (un) {{non-joyo-reading}}, [[きん]] (kin)
-|kanon=[[うん]] (un) {{non-joyo-reading}}, [[きん]] (kin)
-|kanyoon=[[いん]] (in) {{non-joyo-reading}}
-|kun=[[ならす|なら・す]] ([[均す]], nara-su)
-|nanori=[[お]] (o), [[ただ]] (tada), [[なお]] (nao), [[なり]] (nari), [[ひとし]] (hitoshi), [[ひら]] (hira), [[まさ]] (masa)}}
+|goon=うん, きん
+|kanon=うん, きん
+|kanyoon=いん
+|kun=なら-す
+|nanori=お, ただ, なお, なり, ひとし, ひら, まさ
+}}
 
 ====Compounds====
 {{top4}}
