/* Readings */ {{ja-readings}} update, removed kun:ananisuru <坑#47026657>

--- a/en/坑/坑.13012.wikitext
+++ b/en/坑/坑.13012.wikitext
@@ -52,7 +52,11 @@
 
 ====Readings====
 {{ja-kanjitab|こう|yomi=o}}
-* {{ja-readings|goon=[[きょう]] (kyō) {{non-joyo-reading}}|kanon=[[こう]] (kō)|kun=[[あな]] (ana), [[あなにする]] (ananisuru)}}
+{{ja-readings
+|goon=きょう
+|kanon=こう
+|kun=あな-
+}}
 
 ===Noun===
 {{ja-noun|こう}}
