t+ur:[[سنہرے بالونوالا]] ([[WT:EDIT|Assisted]]) <blond#47029681>

--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -62,6 +62,7 @@ Alternative etymology connects {{cog|frk|*blund}} to {{der|en|gem-pro|*blundaz|t
 * Swedish: {{t+|sv|blondin|c}}
 * Tagalog: {{t|tl|rubyo}}, {{t|tl|rubya}}
 * Turkish: {{t+|tr|sarışın}}
+* Urdu: {{t|ur|سنہرے بالونوالا|m|tr=sunahre bālonvālā}}
 * Vietnamese: {{t|vi|tóc vàng hoe}}
 * Volapük: {{qualifier|♂♀}} {{t+|vo|blonan}}, {{qualifier|♂}} {{t|vo|hiblonan}}, {{qualifier|♀}} {{t+|vo|jiblonan}}
 * Welsh: {{t+|cy|penfelyn}}
