--- a/en/惪/惪.15615.wikitext
+++ b/en/惪/惪.15615.wikitext
@@ -3,9 +3,7 @@
 ==Translingual==
 
 ===Han character===
-{{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=JMP|ids=⿱直心}}
-
-# [[ethics]]
+{{Han char|rn=61|rad=心|as=08|sn=11|four=|canj=JMP|ids=⿱直心}
 
 ====References====
 * {{Han ref|kx=0392.181|hdz=42309.030|uh=60EA|ud=24810}}
