--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -121,6 +121,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * Latvian: {{t|lv|ķieģelis|m}}
 * Limburgish: {{t|li|briek}}
 * Lithuanian: {{t|lt|plyta|f}}
+* Low German: {{t+|nds|Backsteen|m}}
 * Luxembourgish: {{t|lb|Zill|f}}
 * Macedonian: {{t|mk|ци́гла|f|sc=Cyrl}}, {{t|mk|ту́ла|f|sc=Cyrl}}
 * Malay: {{t|ms|batu bata}}
