--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -52,6 +52,9 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 # {{lb|en|transitive}} To use a float (tool).
 #: ''It is time to '''float''' this horse's teeth.''
 # {{lb|en|poker}} To perform a [[float#Noun|float]].
+# {{lb|en|computing|transitive}} To cause (an [[element]] within a [[document]]) to float above or beside others.
+#* '''2010''', Andy Harris, ''HTML, XHTML and CSS All-In-One For Dummies'' (page 290)
+#*: To get the footer acting right, you need to '''float''' it and clear it on both margins.
 
 ====Derived terms====
 * {{l|en|float someone's boat}}
