--- a/en/时/时.16926.wikitext
+++ b/en/时/时.16926.wikitext
@@ -4,14 +4,11 @@
 {{stroke order|strokes=7}}
 {{stroke order|type=animate}}
 
-===Etymology===
+===Glyph origin===
 Simplified from [[時]] (elimination of [[土]])
 
 ===Han character===
 {{Han char|rn=72|rad=日|as=03|sn=7|four=|canj=ADI|ids=⿰日寸}}
-
-# [[time]], [[season]]
-# [[era]], [[age]], [[period]]
 
 ====References====
 * {{Han ref|kx=0490.221|dkj=13772|dj=0851.220|hdz=21487.020|uh=65F6|ud=26102}}
