t+th:[[{{t-needed}}]] t+lo:[[{{t-needed}}]] t+cmn:[[{{t-needed}}]] t-balance ([[WT:EDIT|Assisted]]) <flesh#47060214>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -56,6 +56,8 @@ From {{etyl|enm|en}} {{m|enm|flesh}}, from {{etyl|ang|en}} {{m|ang|flǣsc}}, fro
 * Armenian: {{t+|hy|միս}}
 * Bulgarian: {{t+|bg|месо|n|sc=Cyrl}}
 * Catalan: {{t+|ca|carn|f}}
+* Chinese:
+*: Mandarin: {{t-needed|cmn}}
 * Czech: {{t+|cs|maso|n}}
 * Danish: {{t+|da|kød|n}}
 * Dutch: {{t+|nl|vlees|n}}
@@ -71,8 +73,9 @@ From {{etyl|enm|en}} {{m|enm|flesh}}, from {{etyl|ang|en}} {{m|ang|flǣsc}}, fro
 * Ido: {{t+|io|karno}}
 * Irish: {{t+|ga|feoil|f}}
 * Italian: {{t+|it|carne|f}}
-{{trans-mid}}
 * Japanese: {{t+|ja|肉|sc=Jpan|tr=にく, niku}}
+{{trans-mid}}
+* Lao: {{t-needed|lo}}
 * Latgalian: {{t|ltg|mīsa|f}}
 * Latvian: {{t|lv|miesa|f}}, {{t|lv|ķermenis|m}}
 * Lithuanian: {{t+|lt|kūnas}}
@@ -89,6 +92,7 @@ From {{etyl|enm|en}} {{m|enm|flesh}}, from {{etyl|ang|en}} {{m|ang|flǣsc}}, fro
 * Swahili: {{t+|sw|chembechembe}}
 * Swedish: {{t+|sv|kött|n}}
 * Telugu: {{t+|te|కండ}}
+* Thai: {{t-needed|th}}
 * Tok Pisin: {{t|tpi|mit}}
 * Volapük: {{t+|vo|mid}}
 * Walloon: {{t+|wa|tchå|f}}
