Added Japanese description <坭#47061170>

--- a/en/坭/坭.13040.wikitext
+++ b/en/坭/坭.13040.wikitext
@@ -48,7 +48,7 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=土05}}
 
-# {{defn|lang=ja|sort=土05}}
+# mud.
 
 ====Readings====
 * {{ja-readings|on=[[でい]] (dei), [[ない]] (nai), [[で]] (de), [[に]] (ni)|kun=[[どろ]] (doro)}}
