--- a/en/坒/坒.13013.wikitext
+++ b/en/坒/坒.13013.wikitext
@@ -14,8 +14,8 @@
 
 ===Glyph origin===
 {{Han etym}}
-
-===Pronunciation===
+===Etymology 1===
+====Pronunciation====
 {{zh-pron
 |m=bì
 |c=bai6,bei2
@@ -25,12 +25,14 @@
 |cat=v
 }}
 
-===Definitions===
+====Definitions====
 {{zh-hanzi}}
 
-# to [[compare]]
-# to [[match]]
-# to [[equal]]
+# to [[connect]]
+===Etymology 2===
+{{zh-see|陛|v}}
+===Etymology 3===
+{{zh-see|壁|ss}}
 
 ----
 
