--- a/en/垟/垟.13091.wikitext
+++ b/en/垟/垟.13091.wikitext
@@ -4,9 +4,8 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=48151|canj=GTQ|ids=⿰土羊}}
 
-
 ====References====
-* {{Han ref|kx=0228.130|dkj=05053|dj=0464.100|hdz=10442.010|uh=579F|ud=22431|bh=CE52|bd=52818}}
+{{Han ref|kx=0228.130|dkj=05053|dj=0464.100|hdz=10442.010|uh=579F}}
 * [http://yedict.com/htm/57/579F.htm yedict.com (叶典)]
 
 ----
@@ -20,18 +19,24 @@
 {{zh-pron
 |m=yáng
 |c=joeng4
+|w=3hhian
 |cat=n
 }}
 
 ====Definitions====
 {{zh-hanzi}}
 
-# {{lb|zh|usually used in place names}} [[field]]
-# a kind of animal in mythology
+# {{lb|zh|chiefly|Wu}} [[field]]
+# {{lb|zh|Chinese mythology}} [[earth]] [[spirit]]
+
+=====Usage notes=====
+* {{sense|field}} Often used in place names.
+
+====Compounds====
+{{zh-der|墳垟|翁垟|上家垟}}
 
 ===Etymology 2===
-{{zh-see|墻|ss}}
-
+{{zh-see|牆|ss}}
 
 ----
 
