--- a/en/垟/垟.13091.wikitext
+++ b/en/垟/垟.13091.wikitext
@@ -30,7 +30,7 @@
 # {{lb|zh|Chinese mythology}} [[earth]] [[spirit]]
 
 =====Usage notes=====
-* {{sense|field}} Often used in place names.
+* {{sense|field}} Most commonly used in place names.
 
 ====Compounds====
 {{zh-der|墳垟|翁垟|上家垟}}
