t+ka:[[ხორცშესხმა]] ([[WT:EDIT|Assisted]]) <flesh#47072935>

--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -240,6 +240,7 @@ From {{etyl|enm|en}} {{m|enm|flesh}}, from {{etyl|ang|en}} {{m|ang|flǣsc}}, fro
 {{trans-top|to put flesh on}}
 * Danish: {{t|da|opfede}}
 * Dutch: {{t+|nl|vervetten}}, {{t+|nl|verdikken}}, {{t+|nl|aandikken}}
+* Georgian: {{t|ka|ხორცშესხმა}}
 * German: {{t+|de|zunehmen}}
 {{trans-mid}}
 * Persian: {{t+|fa|پرواربندی}} (parvaarbandi)
