--- a/en/圵/圵.12983.wikitext
+++ b/en/圵/圵.12983.wikitext
@@ -10,22 +10,29 @@
 * {{Han ref|kx=0224.170|dkj=04896|dj=0459.020|hdz=10419.040|uh=5735|ud=22325}}
 
 ----
+==Chinese==
+{{zh-forms}}
 
-==Cantonese==
+===Pronunciation===
+{{zh-pron
+|m=dàng
+|m-s=
+|c=
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n
+}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[joeng6]]|y=yeung6}}
+===Definitions===
+{{zh-hanzi}}
 
-# {{defn|lang=yue|sort=土03}}
-
-====References====
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 85]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[dàng]] ([[dang4]])|wg=tang<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土03}}
+# high fields
