--- a/en/慕/慕.15721.wikitext
+++ b/en/慕/慕.15721.wikitext
@@ -3,6 +3,7 @@
 
 ===Han character===
 {{Han char|rn=61|rad=心|as=11|sn=15|four=44333|canj=TAKP|ids=⿱莫㣺}}
+{{stroke order|type=animate}}
 
 ====Related characters====
 * [[募]] [[墓]] [[幕]]
