--- a/en/坣/坣.13030.wikitext
+++ b/en/坣/坣.13030.wikitext
@@ -12,4 +12,11 @@
 ----
 
 ==Chinese==
+===Etymology 1===
 {{zh-see|堂|ssv}}
+===Etymology 2===
+{{zh-see|鏜|ss}}
+===Etymology 3===
+{{zh-see|嘡|ss}}
+===Etymology 4===
+{{zh-see|膛|ss}}
