--- a/en/垥/垥.13097.wikitext
+++ b/en/垥/垥.13097.wikitext
@@ -4,24 +4,37 @@
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=48161|canj=GOMR|ids=⿰土合}}
 
-# [[dike]] [[water]], water in the [[embankment]]
-
 ====References====
 * {{Han ref|kx=0228.240|dkj=05063|dj=0464.200|hdz=10440.040|uh=57A5|ud=22437|bh=CE5C|bd=52828}}
 * [http://yedict.com/htm/57/57A5.htm yedict.com (叶典)]
 
 ----
+==Chinese==
+{{zh-forms}}
 
-==Cantonese==
+===Pronunciation===
+{{zh-pron
+|m=xié
+|m-s=
+|c=hip3
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=n
+}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[hip3]]|y=hip3}}
+===Definitions===
+{{zh-hanzi}}
 
-# {{defn|lang=yue|sort=土06}}
-
-====References====
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 86]
-
+# [[dike]] [[water]], water in the [[embankment]]
 ----
 
 ==Japanese==
@@ -34,14 +47,6 @@
 ====Readings====
 * {{ja-readings|on=[[きょう]] (kyō), [[こう]] (kō)|kun=}}
 
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xié]] ([[xie2]])|wg=hsieh<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=土06}}
 
 ----
 
