--- a/en/圶/圶.12984.wikitext
+++ b/en/圶/圶.12984.wikitext
@@ -10,22 +10,29 @@
 * {{Han ref|kx=0224.180|dkj=04897|hdz=10419.020|uh=5736|ud=22326}}
 
 ----
+==Chinese==
+{{zh-forms}}
 
-==Cantonese==
+===Pronunciation===
+{{zh-pron
+|m=qià
+|m-s=
+|c=
+|c-t=
+|g=
+|h=pfs=
+|j=
+|md=
+|mn=
+|mn-t=
+|w=
+|x=
+|mc=y
+|oc=y
+|cat=pn
+}}
 
-===Hanzi===
-{{yue-hanzi|jyut=[[haap3]]|y=haap3}}
+===Definitions===
+{{zh-hanzi}}
 
-# {{defn|lang=yue|sort=土03}}
-
-====References====
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 1), p. 85]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[qià]] ([[qia4]])|wg=ch'ia<sup>4</sup>}}
-
-# {{defn|lang=cmn|sort=土03}}
+# an ancient place name
