--- a/en/坆/坆.13001.wikitext
+++ b/en/坆/坆.13001.wikitext
@@ -11,12 +11,13 @@
 
 ----
 
-==Cantonese==
+==Chinese==
 
-===Hanzi===
-{{yue-hanzi|jyut=[[fan4]]|y=fan4}}
+===Etymology 1===
+{{zh-see|墳|v}}
 
-# {{defn|lang=yue|sort=土04}}
+===Etymology 2===
+{{zh-see|梅|v}}
 
 ----
 
