--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -195,7 +195,7 @@ From {{inh|en|enm|coate}}, {{m|enm|cotte}}, from {{der|en|fro|cote}}, {{m|fro|co
 * Dutch: {{t+|nl|bekleden}}, {{t|nl|coaten}}
 * Esperanto: {{t|eo|tegi}}
 * Finnish: {{t+|fi|päällystää}}
-* French: {{t+|fr|couvrir}}
+* French: {{t+|fr|couvrir}}, {{t+|fr|revêtir}}
 * German: {{t+|de|beschichten}}
 * Greek: {{t+|el|σκεπάζω|sc=Grek}}
 {{trans-mid}}
