--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -1,39 +1,35 @@
 {{also|Branch}}
 ==English==
-{{wikipedia|branch (disambiguation)}}
-[[Image:Acacia constricta branch.jpg|thumb|Tree branches.]]
-
-===Alternative forms===
-* {{l|en|braunch}}
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, from {{etyl|fro|en}} {{m|fro|branche}}, {{m|fro|brance}}, from {{etyl|VL.|en}} {{m|la|branca||footprint", later also "paw, claw}}, of unknown origin, possibly from {{etyl|cel-gau|en}} {{m|cel-gau|*vranca}}. Indo-European cognates include [[Old Norse]] {{m|non|vró||angle, corner}}, [[Lithuanian]] {{m|lt|rankà||hand}}, [[Old Church Slavonic]] {{m|cu|рѫка|tr=rǫka||hand}}, [[Albanian]] {{m|sq|rangë||yard work}}.
+[[File:Acacia constricta branch.jpg|thumb|Tree branches]]
+
+From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, from {{der|en|fro|branche}}, {{m|fro|brance}}, from {{der|en|VL.|branca||[[footprint]]”, later also “[[paw#Noun|paw]], [[claw#Noun|claw]]}}, of unknown origin, possibly from {{der|en|cel-gau|*vranca}}. Indo-European cognates include {{cog|non|vró||[[angle#Noun|angle]], [[corner#Noun|corner]]}}, {{cog|lt|rankà||[[hand#Noun|hand]]}}, {{cog|cu|рѫка|tr=rǫka||hand}}, {{cog|sq|rangë||[[yardwork]]}}.
 
 ===Pronunciation===
-* {{a|US|Northern England}} {{IPA|/bɹæntʃ/|lang=en}}
-* {{audio|en-us-branch.ogg|Audio (US)|lang=en}}
-* {{rhymes|æntʃ|ɑːntʃ|lang=en}}
 * {{a|RP}} {{IPA|/bɹɑːntʃ/|lang=en}}
+* {{a|US|Northern England}} {{IPA|/bɹæntʃ/|lang=en}}
+* {{audio|en-us-branch.ogg|Audio (GA)|lang=en}}
+* {{rhymes|æntʃ|ɑːntʃ|lang=en}}
 
 ===Noun===
 {{en-noun|es}}
-{{wikipedia}}
 
 # {{senseid|en|tree}} The [[woody]] part of a [[tree]] arising from the [[trunk]] and usually [[dividing]].
 # Any of the parts of something that [[divide]]s like the branch of a tree.
-#: ''the '''branch''' of an antler, a chandelier, or a railway''
+#: {{ux|en|the '''branch''' of an antler, a chandelier, or a railway}}
 # {{lb|en|in particular}} A [[creek]] or [[stream]] which flows into a larger river. {{qualifier|In the US, ''branch'' is a Southern US term; compare Ohio, Pennsylvania and West Virginia ''[[run]]'', and New York and New England ''[[brook]]''.}}
 # {{lb|en|geometry}} One of the portions of a [[curve]] that extends outwards to an indefinitely great distance.
-#: ''the '''branches''' of a hyperbola''
+#: {{ux|en|the '''branches''' of a hyperbola}}
 # A [[location]] of an [[organization]] with several locations.
-#: ''Our main '''branch''' is downtown, and we have '''branches''' in all major suburbs.''
+#: {{ux|en|Our main '''branch''' is downtown, and we have '''branches''' in all major suburbs.}}
 # {{senseid|en|family descent}} A line of family descent, in distinction from some other line or lines from the same stock; any descendant in such a line.
-#: ''the English '''branch''' of a family''
+#: {{ux|en|the English '''branch''' of a family}}
 #* Carew
 #*: his father, a younger '''branch''' of the ancient stock
 # {{lb|en|Mormonism}} A local [[congregation]] of the [[LDS]] Church that is not large enough to form a [[ward]]; see [[w:Ward (LDS Church)|Wikipedia article on ward in LDS church]].
 # {{senseid|en|area}} An area in business or of knowledge, research.
-#* {{quote-magazine|date=2012-01
+#* {{quote-journal|date=2012-01
 |author=Robert L. Dorit
 |title=Rereading Darwin
 |volume=100|issue=1|page=23
@@ -49,11 +45,12 @@ From {{etyl|enm|en}} {{m|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, f
 * {{l|en|branch banking}}
 * {{l|en|branch line}}
 * {{l|en|branch office}}
-* {{l|en|main branch}}
 * {{l|en|branchlike}}
+* {{l|en|main branch}}
+* {{l|en|olive branch}}
 
 ====Synonyms====
-* {{sense|part of a tree}} {{l|en|bough}}, {{l|en|tillow}}, {{l|en|twig}}, see also [[Wikisaurus:tree]]
+* {{sense|part of a tree}} {{l|en|bough}}, {{l|en|tillow}}, {{l|en|twig}}; ''see also'' [[Wikisaurus:tree]]
 
 ====Translations====
 {{trans-top|woody part of a tree arising from the trunk}}
@@ -305,9 +302,9 @@ From {{etyl|enm|en}} {{m|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, f
 ===Verb===
 {{en-verb|es}}
 
-# {{lb|en|intransitive}} To arise from the trunk or a larger branch of a tree.
+# {{lb|en|intransitive}} To [[arise]] from the trunk or a larger branch of a tree.
 # {{lb|en|intransitive}} To produce branches.
-#* '''1944''', {{w|Emily Carr}}, ''{{w|The House of All Sorts}}'', "Life Loves Living," [http://www.gutenberg.net.au/ebooks01/0100121h.html]
+#* '''1944''', {{w|Emily Carr}}, ''{{w|The House of All Sorts}}'', "Life Loves Living," [http://www.gutenberg.net.au/ebooks01/0100121h.html]:
 #*: The tree throve and '''branched''' so heavily that the windows of Lower West and the Doll's Flat were darkened.
 # {{lb|en|intransitive}} To divide into separate parts or subdivisions.
 # {{lb|en|intransitive|computing}} To [[jump]] to a [[different]] [[location]] in a [[program]], especially as the result of a [[conditional]] [[statement]].
@@ -362,9 +359,16 @@ From {{etyl|enm|en}} {{m|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, f
 {{trans-mid}}
 {{trans-bottom}}
 
-===Related terms===
+====Related terms====
 * {{l|en|branch off}}
 * {{l|en|branch out}}
+
+===Alternative forms===
+* {{l|en|braunch}}
+
+===Further reading===
+* {{pedia}}
+* {{pedia|branch (disambiguation)}}
 
 [[Category:English basic words]]
 [[Category:en:Trees]]
