/* Pronunciation */ Minor formatting change <branch#47120535>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -10,7 +10,7 @@ From {{der|en|enm|branche}}, {{m|enm|braunche}}, {{m|enm|bronche}}, from {{der|e
 * {{a|RP}} {{IPA|/bɹɑːntʃ/|lang=en}}
 * {{a|US|Northern England}} {{IPA|/bɹæntʃ/|lang=en}}
 * {{audio|en-us-branch.ogg|Audio (GA)|lang=en}}
-* {{rhymes|æntʃ|ɑːntʃ|lang=en}}
+* {{rhymes|ɑːntʃ|æntʃ|lang=en}}
 
 ===Noun===
 {{en-noun|es}}
