--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -287,6 +287,7 @@ From {{etyl|enm|en}} {{m|enm|streight}}, {{m|enm|streght}}, {{m|enm|streiȝt}}, 
 {{trans-mid}}
 * Japanese: {{t|ja|ノンケの|tr=nonke no}}
 * Malay: {{t|ms|heteroseksual}}
+* Norwegian: {{t|no|heterofil}}
 * Polish: {{t|pl|hetero}}
 * Portuguese: {{t|pt|hétero}}
 * Russian: {{qualifier|slang, noun}} {{t+|ru|натура́л|m}}, {{qualifier|literally, noun is used}} {{t+|ru|гетеросексуа́л|m|tr=getɛrosɛksuál}}
