--- a/en/圷/圷.12985.wikitext
+++ b/en/圷/圷.12985.wikitext
@@ -19,7 +19,10 @@
 # {{defn|lang=ja|sort=土03}}
 
 ====Readings====
-* {{ja-readings|on=|kun=[[あくつ]] (akutsu)}}
+{{ja-readings
+|on=
+|kun=あくつ-
+}}
 
 ===Proper noun===
 {{ja-pos|あくつ|proper}}
