--- a/en/偽/偽.11149.wikitext
+++ b/en/偽/偽.11149.wikitext
@@ -57,11 +57,13 @@
 
 ====Readings====
 {{ja-readings
-|goon=が, ぎ
-|kanon=が, ぎ
-|kanyoon=か
-|kun=いつわ-る, にせ-, いつわり
+|goon=が<ぐわ, ぎ
+|kanon=が<ぐわ, ぎ
+|kanyoon=か<くわ
+|kun=いつわ-る<いつは-る, にせ-<!--, いつわ-り<いつは-り-->
 }}
+
+{{attention|ja|"itsuwari" is continuative/noun form of "itsuwaru", it may need to have an etymology here or a new entry linked from here and "itsuwaru"}}
 
 ====Compounds====
 {{der-top|Compounds}}
