--- a/en/旪/旪.16914.wikitext
+++ b/en/旪/旪.16914.wikitext
@@ -13,21 +13,5 @@
 
 ----
 
-==Cantonese==
-
-===Hanzi===
-{{yue-hanzi|jyut=[[hip3]]|y=hip3}}
-
-# {{defn|lang=yue|sort=日02}}
-
-====References====
-* [http://www.iso10646hk.net/jp/document/download.jsp Jyutping Database (iso10646hk.net) - Cantonese Pronunciation List (Part 2), p. 122]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[xié]] ([[xie2]])|wg=hsieh<sup>2</sup>}}
-
-# {{defn|lang=cmn|sort=日02}}
+==Chinese==
+{{zh-see|協|v}}
