--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -22,7 +22,7 @@ Variant of {{l|mul|臼}}.
 
 ===Etymology 1===
 ====Glyph origin====
-Simplified Chinese. Can be analysed either as from an elimination of {{l|zh|雈}} with glyphic alteration from {{l|zh|臼}} to {{l|zh|旧}} to or as a homophonic borrowing.
+Simplified Chinese. Can be analysed either as from an elimination of {{l|zh|雈}} with glyphic alteration from {{l|zh|臼}} to {{l|zh|旧}} to or as using a homophonic character.
 {{zh-see|舊}}
 
 ===Etymology 2===
