--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -11,7 +11,7 @@ Variant of {{l|mul|臼}}.
 {{Han char|rn=72|rad=日|as=01|sn=5|four=|canj=LA|ids=⿰丨日}}
 
 ====Derived characters====
-* [[児]], [[陥]], [[稲]] ({{Han simp|[[兒]], [[陷]], [[稻]]|f=臼|t=旧}} in {{w|Japanese shinjitai}})
+* [[児]], [[陥]], [[稲]] (Glyphic variants of [[兒]], [[陷]], [[稻]])
 
 ====References====
 * {{Han ref|kx=0489.051|dkj=13737|dj=0850.040|hdz=21483.020|uh=65E7|ud=26087}}
