--- a/en/旧/旧.16911.wikitext
+++ b/en/旧/旧.16911.wikitext
@@ -7,6 +7,8 @@
 ===Glyph origin===
 Variant of {{l|mul|臼}}.
 
+The reformative usage in simplified Chinese and Japanese that replaced {{l|mul|舊}} can be analysed either as from an elimination of {{l|mul|雈}} with glyphic alteration from {{l|mul|臼}} to {{l|mul|旧}} or as using a homophonic character.
+
 ===Han character===
 {{Han char|rn=72|rad=日|as=01|sn=5|four=|canj=LA|ids=⿰丨日}}
 
@@ -21,8 +23,6 @@ Variant of {{l|mul|臼}}.
 ==Chinese==
 
 ===Etymology 1===
-====Glyph origin====
-Simplified Chinese. Can be analysed either as from an elimination of {{l|zh|雈}} with glyphic alteration from {{l|zh|臼}} to {{l|zh|旧}} to or as using a homophonic character.
 {{zh-see|舊}}
 
 ===Etymology 2===
