--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -5,7 +5,7 @@
 {{stroke order|type=animate}}
 
 ===Han character===
-{{Han char|rn=72|rad=日|as=05|sn=9|four=60801|canj=AMYO|ids=⿱日⿱𤴓}}
+{{Han char|rn=72|rad=日|as=05|sn=9|four=60801|canj=AMYO|ids=⿱日𤴓}}
 
 ====Derived characters====
 * [[提]]
