Reverted edits by [[Special:Contributions/90.146.50.17|90.146.50.17]]. If you think this rollback is in error, please leave a message on my [[User talk:SemperBlotto|talk page]]. <e.g.#47167222>

--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -6,7 +6,7 @@
 * {{sense|dated}} {{l|en|ex. gr.}}, {{l|en|e. g.}}
 
 ===Etymology===
-A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grātiā||[[for the sake of]] an [[example]]}}.<ref>'''2007''', John C. Traupman, ''The New College Latin and English Dictionary'', ISBN 97805535DAlshad
+A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grātiā||[[for the sake of]] an [[example]]}}.<ref>'''2007''', John C. Traupman, ''The New College Latin and English Dictionary'', ISBN 9780553590128.</ref>
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˌiːˈdʒiː/|/fɔː(ɹ) ɪɡˈzɑːmpəl/|lang=en}} (''See [[#Usage notes|Usage below]]'')
