--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -46,7 +46,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Afrikaans: {{t|af|Nieu-Seeland}}
 * Albanian: {{t|sq|Zelanda e Re}}
 * Amharic: {{t|am|ኒው ዚላንድ|sc=Ethi}}
-* Arabic: {{t|ar|نْيُوزِيلَانْدَا|f|tr=nyūzīlandā}}, {{t|ar|نْيُوزِيلَانْدَا جَدِيدَة|f|tr=zīlandā jadīda}}
+* Arabic: {{t|ar|نِيُوزِيلَانْدَا|f|tr=niyūzīlandā}}, {{t|ar|نِيُوزِيلَنْدَا|f|tr=niyūzīlandā}}, {{t|ar|نِيُوزِيلَانْدَة|f|tr=niyūzīlanda}}, {{t|ar|نِيُوزِيلَنْدَة|f|tr=niyūzīlanda}}, {{t|ar|زِيلَانْدَا الْجَدِيدَة‏|f|tr=zīlandā al-jadīda}}, {{t|ar|زِيلَنْدَا الْجَدِيدَة‏|f|tr=zīlandā al-jadīda}}, {{t|ar|زِيلَانْدَة الْجَدِيدَة‏|f|tr=zīlanda al-jadīda}}, {{t|ar|زِيلَنْدَة الْجَدِيدَة‏|f|tr=zīlanda al-jadīda}}
 * Armenian: {{t|hy|Նոր Զելանդիա}}
 * Asturian: {{t+|ast|Nueva Zelanda|f}}
 * Azeri: {{t+|az|Yeni Zelandiya}}
@@ -78,7 +78,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Georgian: {{t|ka|ახალი ზელანდია}}
 * German: {{t+|de|Neuseeland|n}}
 * Greek: {{t+|el|Νέα Ζηλανδία|f}}
-* Gujarati: {{t|gu|ન્યુઝીલેન્ડ|tr=n'yujhīlēnḍ|sc=Gujr}}
+* Gujarati: {{t|gu|ન્યુઝીલેન્ડ|sc=Gujr}}
 * Hawaiian: {{t|haw|Aotearoa}}
 * Hebrew: {{t|he|נְיוּ זִילַנְד|f|tr=niu ziland}}
 * Hindi: {{t|hi|न्यू ज़ीलंड}}, {{t|hi|न्यूज़ीलैंड}}, {{t+|hi|न्यूज़ीलैण्ड}}
