--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -110,7 +110,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Macedonian: {{t+|mk|Нов Зеланд|m}}
 * Malay: {{t|ms|New Zealand}}
 * Malayalam: {{t|ml|ന്യൂസീലൻഡ്|sc=Mlym}}, {{t|ml|ന്യൂസിലാന്‍റ്|sc=Mlym}}, {{t|ml|ന്യൂസിലാന്ഡ്|sc=Mlym}}
-* Maltese: {{t-check|mt|New Zealand}} <!-- was "New Zealand"; please check anyway -->
+* Maltese: {{t|mt|New Zealand}}
 * Manx: {{t|gv|Noa Heelan|f}}, {{t|gv|Seelan Noa|f|alt=Yn Teelan Noa}}
 * Maori: {{t+|mi|Aotearoa}}, {{t|mi|Niu Tireni}}
 * Marathi: {{t|mr|न्यू झीलँड|sc=Deva}}
