--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -58,6 +58,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Bulgarian: {{t|bg|Но́ва Зела́ндия|f}}
 * Burmese: {{t|my|နယူးဇီလန်|sc=Mymr}}
 * Catalan: {{t+|ca|Nova Zelanda}}
+* Chechen: {{t|ce|Керла Зеланди}}
 * Chinese:
 *: Cantonese: {{t|yue|紐西蘭|sc=Hani}}, {{t|yue|紐西蘭|tr=nau5 sai1 laan4, nau2 sai1 laan4|sc=Hani}}, {{t|yue|新西蘭|sc=Hani}}, {{t|yue|新西兰|tr=san1 sai1 laan4|sc=Hani}}
 *: Hakka: {{t|hak|紐西蘭|sc=Hani}}, {{t|hak|纽西兰|tr=Néu Sî-làn|sc=Hani}}
@@ -68,7 +69,9 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Cornish: {{t|kw|Mordir Nowyth|m}}
 * Czech: {{t+|cs|Nový Zéland|m}}
 * Danish: {{t+|da|New Zealand}}
+* Dhivehi: {{t|dv|ނިއުޒިލޭންޑު}}
 * Dutch: {{t+|nl|Nieuw-Zeeland}}
+* Dzongkha: {{t|dz|ནིའུ་ཛི་ལེནཌ་}}
 * Esperanto: {{t+|eo|Nov-Zelando}}
 * Estonian: {{t+|et|Uus-Meremaa}}
 * Faroese: {{t|fo|Nýsæland|n}}
@@ -94,6 +97,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Kalmyk: {{t|xal|Шинзеленд}}
 * Kamba: {{t|kam|Nyuziland}}
 * Kannada: {{t+|kn|ನ್ಯೂ ಜೀಲ್ಯಾಂಡ್|sc=Knda}}
+* Kashubian: {{t|csb|Nowô Zelandzkô|n}}
 * Kazakh: {{t|kk|Жаңа-Зеландия|sc=Cyrl}}
 * Khmer: {{t|km|ញូហ្សេលែនដ៍|tr=nyuuzeilɛɛn|sc=Khmr}}
 * Kikuyu: {{t|ki|Nyuziland}}
@@ -122,6 +126,8 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Norwegian:
 *: Bokmål: {{t+|nb|New Zealand}}, {{t|nb|Ny-Zealand}}
 *: Nynorsk: {{t+|nn|New Zealand}}, {{t|nn|Ny-Zealand}}
+* Oriya: {{t|or|ନିଉଜିଲ୍ୟାଣ୍ଡ}}
+* Pashto: {{t+|ps|نيوزيلنډ}}
 * Persian: {{t+|fa|نیوزیلند|tr=niyuzilend|sc=fa-Arab}}, {{t|fa|زلاند نو|tr=zelând-e nou|sc=fa-Arab}}, {{t|fa|زلاند جدید|tr=zelând-e jadid|sc=fa-Arab}}
 * Polish: {{t+|pl|Nowa Zelandia|f}}
 * Portuguese: {{t+|pt|Nova Zelândia|f}}
@@ -134,6 +140,9 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Sinhalese: {{t|si|නවසීලන්‍තය|sc=Sinh}}
 * Slovak: {{t|sk|Nový Zéland|m}}
 * Slovene: {{t+|sl|Nôva Zelándija|f}}
+* Sorbian:
+*: Lower Sorbian: {{t|dsb|Nowoseelandska|f}}
+*: Upper Sorbian: {{t|hsb|Nowoseelandska|f}}
 * Spanish: {{t+|es|Nueva Zelanda|f}}, {{t+|es|Nueva Zelandia|f}}
 * Swahili: {{t+|sw|Nyuzilandi}}
 * Swedish: {{t+|sv|Nya Zeeland}}
