--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -48,6 +48,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Amharic: {{t|am|ኒው ዚላንድ|sc=Ethi}}
 * Arabic: {{t|ar|نِيُوزِيلَانْدَا|f|tr=niyūzīlandā}}, {{t|ar|نِيُوزِيلَنْدَا|f|tr=niyūzīlandā}}, {{t|ar|نِيُوزِيلَانْدَة|f|tr=niyūzīlanda}}, {{t|ar|نِيُوزِيلَنْدَة|f|tr=niyūzīlanda}}, {{t|ar|زِيلَانْدَا الْجَدِيدَة‏|f|tr=zīlandā al-jadīda}}, {{t|ar|زِيلَنْدَا الْجَدِيدَة‏|f|tr=zīlandā al-jadīda}}, {{t|ar|زِيلَانْدَة الْجَدِيدَة‏|f|tr=zīlanda al-jadīda}}, {{t|ar|زِيلَنْدَة الْجَدِيدَة‏|f|tr=zīlanda al-jadīda}}
 * Armenian: {{t|hy|Նոր Զելանդիա}}
+* Assamese: {{t|as|নিউজিলেণ্ড}}
 * Asturian: {{t+|ast|Nueva Zelanda|f}}
 * Azeri: {{t+|az|Yeni Zelandiya}}
 * Bashkir: {{t|ba|Яңы Зеландия|sc=Cyrl}}
@@ -101,8 +102,8 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 * Kazakh: {{t|kk|Жаңа-Зеландия|sc=Cyrl}}
 * Khmer: {{t|km|ញូហ្សេលែនដ៍|tr=nyuuzeilɛɛn|sc=Khmr}}
 * Kikuyu: {{t|ki|Nyuziland}}
-* Korean: {{t|ko|^뉴질랜드}}
 {{trans-mid}}
+* Korean: {{t|ko|^뉴질랜드}}
 * Kyrgyz: {{t|ky|Жаңы Зеландия|sc=Cyrl}}
 * Lao: {{t|lo|ນິວ​ຊີ​ແລນ}}
 * Latin: {{t|la|Nova Seelandia|f}}, {{t|la|Nova Zelandia|f}}
