/* See also */using [[T:cln]] to add the category makes proper sortkeys be used using [[Project:AWB|AWB]] <垓#47175336>

--- a/en/垓/垓.13079.wikitext
+++ b/en/垓/垓.13079.wikitext
@@ -37,8 +37,7 @@
 ===See also===
 {{zh-numerals-10^4}}
 
-[[Category:Chinese numeral symbols]]
-[[Category:Chinese numerals]]
+{{cln|zh|numeral symbols|numerals}}
 
 ----
 
