--- a/en/场/场.12988.wikitext
+++ b/en/场/场.12988.wikitext
@@ -3,9 +3,6 @@
 ==Translingual==
 {{stroke order}}
 
-===Glyph oigin===
-{{Han simp|場|f=昜|t=𠃓}}
-
 ===Han character===
 {{Han char|rn=32|rad=土|as=03|sn=6|four=|canj=GNSH|ids=⿰土𠃓}}
 
@@ -15,4 +12,6 @@
 ----
 
 ==Chinese==
+====Glyph oigin====
+{{Han simp|場|f=昜|t=𠃓}}
 {{zh-see|場}}
