--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -128,7 +128,7 @@ From {{etyl|nl|en}} {{m|nl|Nieuw-Zeeland||new Zeeland}}, after the Dutch settlem
 *: Bokmål: {{t+|nb|New Zealand}}, {{t|nb|Ny-Zealand}}
 *: Nynorsk: {{t+|nn|New Zealand}}, {{t|nn|Ny-Zealand}}
 * Oriya: {{t|or|ନିଉଜିଲ୍ୟାଣ୍ଡ}}
-* Pashto: {{t+|ps|نيوزيلنډ}}
+* Pashto: {{t+|ps|نيوزيلنډ}}, {{t|ps|نویزېلنډ|f|tr=nə́wayzelánḍ}}
 * Persian: {{t+|fa|نیوزیلند|tr=niyuzilend|sc=fa-Arab}}, {{t|fa|زلاند نو|tr=zelând-e nou|sc=fa-Arab}}, {{t|fa|زلاند جدید|tr=zelând-e jadid|sc=fa-Arab}}
 * Polish: {{t+|pl|Nowa Zelandia|f}}
 * Portuguese: {{t+|pt|Nova Zelândia|f}}
