--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -22,6 +22,7 @@ From {{inh|en|enm|felt}}, from {{inh|en|ang|felt}}, from {{inh|en|gem-pro|*felta
 # {{lb|en|obsolete}} A [[skin]] or [[hide]]; a [[fell]]; a [[pelt]].
 #* '''1707''', John Mortimer, ''The whole art of husbandry'':
 #*: To know whether sheep are sound or not, see that the '''felt''' be loose.
+{{topics|en|Fabrics}}
 
 =====Translations=====
 {{trans-top|cloth made of matted fibres of wool}}
