--- a/en/星/星.16967.wikitext
+++ b/en/星/星.16967.wikitext
@@ -119,6 +119,12 @@ From {{etyl|ojp|ja|sort=ほし}}. Possible cognates include {{cog|ko|별||star}}
 # {{lb|ja|sort=ほし|tarot}} the [[star|Star]]
 # {{lb|ja|abbreviation}} [[Singapore]]
 
+===Suffix===
+{{ja-pos|suffix|せい}}
+
+# {{lb|ja|loosely|especially|fiction}} ''suffix attached to the name of a planet''
+#:{{ja-usex|ニューイヤー'''星'''調%査%行|^ニュー ^イヤー'''-せい''' ^ちょう%さ%こう|Expedition to Planet New Year}}
+
 ===See also===
 * {{ja-r|箒%星|ほうき%ぼし|[[comet]]}}
 * {{ja-r|星%星|ほし%ぼし}}, {{ja-r|星%々|ほし%ぼし|[[stars]]}}
