--- a/en/坂/坂.12997.wikitext
+++ b/en/坂/坂.12997.wikitext
@@ -3,7 +3,7 @@
 ==Translingual==
 
 ===Glyph origin===
-{{Han compound|土|t1=mound|反|ls=psc|c1=s|c2=p}}.
+{{Han compound|土|反|ls=psc|c1=s|c2=p}}.
 
 ===Han character===
 {{Han char|rn=32|rad=土|as=04|sn=7|four=|canj=GHE|ids=⿰土反}}
