/* Norwegian Nynorsk */ verb <felt#47238263>

--- a/en/f/felt.6877.wikitext
+++ b/en/f/felt.6877.wikitext
@@ -249,7 +249,7 @@ From {{der|nb|de|Feld}}
 
 ==Norwegian Nynorsk==
 
-===Etymology===
+===Etymology 1===
 From {{der|nn|de|Feld}}
 
 ===Noun===
@@ -269,5 +269,12 @@ From {{der|nn|de|Feld}}
 * {{l|nn|oljefelt}}
 {{bottom}}
 
-===References===
+===Etymology 2===
+
+===Verb===
+{{head|nn|verb form}}
+
+# {{form of|past participle|fella|lang=nn}}
+
+===Further reading===
 * {{R:The Nynorsk Dictionary}}
