--- a/en/昼/昼.16997.wikitext
+++ b/en/昼/昼.16997.wikitext
@@ -47,7 +47,7 @@
 
 ===Etymology===
 {{ja-kanjitab|ひる|yomi=kun}}
-From {{ja-compound|日|ひ|る|t1=sun|pos2=suffix expressing state or change}}, as in the time when the sun is at its highest point in the sky {{rfv-etymology|ja}}.
+From {{ja-compound|日|ひ|る|t1=sun|pos2=suffix expressing state or change}}, as in the time when the sun is at its highest point in the sky {{rfv-etymology|ja}}. Compare {{ja-r|夜|よる|nighttime}}.
 {{attention|ja|Old Japanese?}}
 
 ====Noun====
