t+no:[[tordner]] ([[WT:EDIT|Assisted]]) <thunder#47241705>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -299,7 +299,7 @@ From {{inh|en|ang|þunor}}, from {{inh|en|gem-pro|*þunraz}}, from {{der|en|ine-
 * Luxembourgish: {{t|lb|donneren}}
 {{trans-mid}}
 * Manchu: {{t|mnc|ᠠᡴᠵᠠᠮᠪᡳ|tr=akjambi}}
-* Norwegian: {{t|no|lyne}}
+* Norwegian: {{t|no|lyne}}, {{t|no|tordner}}
 * Occitan: {{t+|oc|tronar}}
 * Polish: {{t+|pl|grzmieć}}, {{t|pl|zagrzmieć}}
 * Portuguese: {{t+|pt|trovoar}}, {{t+|pt|trovejar}}
