/* Translations */ <Czech Republic#47243332>

--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -59,7 +59,7 @@
 * Greek: {{t+|el|Τσεχία|f}}
 *: Pontic Greek: {{t|pnt|Δημοκρατίαν τη Τσεχίας}}, {{t|pnt|Τσεχία}}
 * Haitian Creole: {{t|ht|Repiblik Tcheki}}
-* Hebrew: {{t|he|הרפובליקה הצ׳כית|f|tr=ha'republiqa ha'chekhit}}, {{t|he|צ'כיה|f|tr=chekhia|sc=Hebr}}
+* Hebrew: {{t|he|צֶ'כְיָה|f|tr=Chekhia|sc=Hebr}}
 * Hindi: {{t|hi|चेक रिपब्लिक}}, {{t+|hi|चेक}}
 * Hungarian: {{t+|hu|Cseh Köztársaság}}, {{t+|hu|Csehország}}
 * Icelandic: {{t|is|Tékkneska lýðveldið|n}}, {{t+|is|Tékkland|n}}
