--- a/en/倮/倮.11054.wikitext
+++ b/en/倮/倮.11054.wikitext
@@ -4,11 +4,13 @@
 ===Han character===
 {{Han char|rn=9|rad=人|as=08|sn=10|four=|canj=OWD|ids=⿰亻果}}
 
-# [[naked]]
-# ''same as'' [[裸]]
-
 ====References====
 * {{Han ref|kx=0109.070|dkj=00797|dj=0232.050|hdz=10177.030|uh=502E|ud=20526}}
+
+----
+
+==Chinese==
+{{zh-see|裸|v}}
 
 ----
 
@@ -33,15 +35,6 @@
 
 # get rid of
 # [[naked]], [[bare]]
-
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|pin=[[luǒ]] ([[luo3]])|wg=lo<sup>3</sup>}}
-
-# {{defn|lang=cmn|sort=人08}}
 
 ----
 
