--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -33,6 +33,12 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 * {{l|en|emmer}}
 * {{l|en|farro}}
 
+====Hypernyms====
+* {{sense|grain}} [[hulled wheat]]
+
+====Coordinate terms====
+* {{sense|grain}} [[emmer]], [[einkorn]]
+
 =====Translations=====
 {{trans-top|a type of wheat, Triticum aestivum spelta}}
 * Armenian: {{t+|hy|հաճար}}
