--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -26,10 +26,10 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 # A grain, considered either a subspecies of [[wheat]], {{m|mul|Triticum aestivum subsp. spelta}}, or a separate species {{m|mul|Triticum spelta}} or {{taxlink|Triticum dicoccum|species}}.
 
 ====Synonyms====
-* {{sense|grain}} {{l|en|[[dinkel]] [[wheat]]}}, {{l|en|[[hulled]] [[wheat]]}}
+* {{sense|grain}} {{vern|dinkel wheat}}, {{vern|hulled wheat}}
 
-=====See also=====
-* {{pedialite}}
+===See also===
+* {{pedia}}
 * {{l|en|emmer}}
 * {{l|en|farro}}
 
