--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -34,7 +34,7 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 * {{l|en|farro}}
 
 ====Hypernyms====
-* {{sense|grain}} [[hulled wheat]]
+* {{sense|grain}} {{vern|hulled wheat}}
 
 ====Coordinate terms====
 * {{sense|grain}} [[emmer]], [[einkorn]]
