--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -37,7 +37,7 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 * {{sense|grain}} {{vern|hulled wheat}}
 
 ====Coordinate terms====
-* {{sense|grain}} [[emmer]], [[einkorn]]
+* {{sense|grain}} [[emmer]] ([[farro]]), [[einkorn]]
 
 =====Translations=====
 {{trans-top|a type of wheat, Triticum aestivum spelta}}
