/* Coordinate terms */ <spelt#47261817>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -34,7 +34,7 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 ====Coordinate terms====
 * {{sense|grain}} [[emmer]] ([[farro]]), [[einkorn]]
 
-=====Translations=====
+====Translations====
 {{trans-top|a type of wheat, Triticum aestivum spelta}}
 * Armenian: {{t+|hy|հաճար}}
 * Basque: {{t|eu|espelta}}
