--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -25,16 +25,16 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 
 # A grain, considered either a subspecies of [[wheat]], {{m|mul|Triticum aestivum subsp. spelta}}, or a separate species {{m|mul|Triticum spelta}} or ''[[Triticum dicoccon]]''.
 
-====Synonyms====
+=====Synonyms=====
 * {{sense|grain}} {{vern|dinkel wheat}}
 
-====Hypernyms====
+=====Hypernyms=====
 * {{sense|grain}} {{vern|hulled wheat}}
 
-====Coordinate terms====
+=====Coordinate terms=====
 * {{sense|grain}} [[emmer]] ([[farro]]), [[einkorn]]
 
-====Translations====
+=====Translations=====
 {{trans-top|a type of wheat, Triticum aestivum spelta}}
 * Armenian: {{t+|hy|հաճար}}
 * Basque: {{t|eu|espelta}}
