--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -29,7 +29,7 @@ From {{inh|en|enm|spelt}}, from {{inh|en|ang|spelt||spelt, corn}}, from {{der|en
 * {{sense|grain}} {{vern|dinkel wheat}}
 
 =====Hypernyms=====
-* {{sense|grain}} {{vern|hulled wheat}}
+* {{sense|grain}} [[hulled wheat]]
 
 =====Coordinate terms=====
 * {{sense|grain}} [[emmer]] ([[farro]]), [[einkorn]]
