t+tt:[[ашказан]] ([[WT:EDIT|Assisted]]) <stomach#47267285>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -213,6 +213,7 @@ From {{etyl|enm|en}} {{m|enm|stomak}}, from {{etyl|fro|en}} {{m|fro|estomac}}, f
 * Tambunan Dusun: {{t|kzt|tian}}
 * Tamil: {{t+|ta|இரைப்பை|sc=Taml}}
 * Taos: {{t|twf|thį̀ę’éna}}
+* Tatar: {{t|tt|ашказан}}
 * Telugu: {{t|te|జీర్ణకోశము|sc=Telu}}, {{t+|te|జీర్ణాశయము|sc=Telu}}
 * Thai: {{t+|th|ท้อง}}, {{t+|th|กระเพาะ}}, {{t|th|กระเพาะอาหาร}}
 * Tibetan: {{t|bo|གྲོད་ཁོག}}
