/* Readings */ edited using [[wikt:User:Dixtosa/AjaxEdit.js|AjaxEdit]] <圳#47268328>

--- a/en/圳/圳.12981.wikitext
+++ b/en/圳/圳.12981.wikitext
@@ -47,7 +47,7 @@
 # {{defn|lang=ja|sort=土03}}
 
 ====Readings====
-* {{ja-readings|on=[[しん]] (shin), [[けん]] (ken)|}}
+* {{ja-readings|on=[[しん]] (shin), [[けん]] (ken)}}
 
 ----
 
