--- a/en/早/早.16913.wikitext
+++ b/en/早/早.16913.wikitext
@@ -70,7 +70,13 @@ Alternatively, it is also possible that {{lang|zh|早}} was originally a pictogr
 {{ja-kanji|grade=1|rs=日02}}
 
 ====Readings====
-{{ja-readings|goon=[[そう]] (sō)|kanon=[[そう]] (sō)|kanyoon=[[さつ]] (satsu)|kun=[[はやい]] (hayai), [[はや]] (haya), [[さ]] (sa)}}
+{{ja-readings
+|goon=そう
+|kanon=そう
+|kanyoon=さつ
+|kun=はや-い, はや, さ
+}}
+{{attention|ja|Does さつ have suffix つ?}}
 
 ====Compounds====
 {{der-top|Compounds}}
