--- a/en/圳/圳.12981.wikitext
+++ b/en/圳/圳.12981.wikitext
@@ -47,7 +47,9 @@
 # {{defn|lang=ja|sort=土03}}
 
 ====Readings====
-* {{ja-readings|on=[[しん]] (shin), [[けん]] (ken)}}
+{{ja-readings
+|on=しん, けん
+}}
 
 ----
 
