--- a/en/偷/偷.11143.wikitext
+++ b/en/偷/偷.11143.wikitext
@@ -64,7 +64,10 @@
 # {{defn|lang=ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings|on=[[ちゅう]] (chū), [[とう]] (tō)|kun=[[ぬすむ]] (nusumu)}}
+{{ja-readings
+|on=ちゅう, とう
+|kun=ぬす-む
+}}{{attention|ja|Okurigana needs checking.}}
 
 ----
 
