/* Readings */ {{ja-readings}} update <惧#47296464>

--- a/en/惧/惧.15612.wikitext
+++ b/en/惧/惧.15612.wikitext
@@ -25,4 +25,7 @@
 # dread
 
 ====Readings====
-* {{ja-readings|on=[[く]] (ku), [[ぐ]] (gu)|kun=[[おそれる]] (osoreru)}}
+{{ja-readings
+|on=く, ぐ
+|kun=おそ-れる
+}}
