--- a/en/垂/垂.13061.wikitext
+++ b/en/垂/垂.13061.wikitext
@@ -73,20 +73,20 @@
 
 ====Compounds====
 {{top3}}
-* [[垂直]] (''suichoku''): vertical, perpendicular
-* [[垂線]] (''suisen''): perpendicular line
-* [[懸垂]] (''kensui''): suspension, pendency
-* [[垂れる]] (''tareru''): hang down
+* {{ja-r|垂直|すいちょく}}: vertical, perpendicular
+* {{ja-r|垂線|すいせん}}: perpendicular line
+* {{ja-r|懸垂|けんすい}}: suspension, pendency
+* {{ja-r|垂れる|たれる}}: hang down
 {{mid3}}
-* [[垂れ下がる]] (''taresagaru''): hang, dangle
-* [[雨垂れ]] (''amadare''): raindrops
-* [[垂らす]] (''tarasu''): hang down
-* [[髪を垂らす]] (''kami o tarasu''): let one's hair hang down
+* {{ja-r|垂れ下がる|たれさがる}}: hang, dangle
+* {{ja-r|雨垂れ|あまだれ}}: raindrops
+* {{ja-r|垂らす|たらす}}: hang down
+* {{ja-r|髪を垂らす|かみをたらす}}: let one's hair hang down
 {{mid3}}
-* [[垂れ]] (''tare''): sauce, gravy
-* [[胡麻垂れ]] (''gomadare''): sesame sauce
-* [[糞っ垂れ]] (''kusottare''): vulgar epithet
-* [[しみっ垂れ]] (''shimittare''): stinginess, miser
+* {{ja-r|垂れ|たれれ}}: sauce, gravy
+* {{ja-r|胡麻垂れ|ごまだれ}}: sesame sauce
+* {{ja-r|糞っ垂れ|くそったれ}}: vulgar epithet
+* {{ja-r|しみっ垂れ|しみったれ}}: stinginess, miser
 {{bottom}}
 
 ----
