/* Noun */ just use Alternative forms <垂#47303023>

--- a/en/垂/垂.13061.wikitext
+++ b/en/垂/垂.13061.wikitext
@@ -68,8 +68,8 @@
 # zigzag-shaped paper streamer often used to adorn Shinto-related objects
 # [[hornbeam]] plant
 
-====See also====
-* {{ja-r|四手|しで}}: alternative form of 垂 ''(noun)''
+====Alternative forms====
+* {{ja-r|四手|しで}}
 
 ====Compounds====
 {{top3}}
