--- a/en/惨/惨.15613.wikitext
+++ b/en/惨/惨.15613.wikitext
@@ -19,9 +19,10 @@
 ----
 
 ==Japanese==
+{{ja-kanji forms|惨|慘}}
 
 ===Kanji===
-{{ja-kanji|grade=c|rs=心08}}
+{{ja-kanji|grade=c|rs=心08|kyu=慘}}
 
 # wretched
 
