t+ha:[[tarnatsa]] ([[WT:EDIT|Assisted]]) <thunder#47319601>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -92,6 +92,7 @@ From {{inh|en|ang|þunor}}, from {{inh|en|gem-pro|*þunraz}}, from {{der|en|ine-
 * German: {{t+|de|Donner|m}}
 * Greek: {{t+|el|βροντή|f}}
 * Haitian Creole: {{t|ht|loray}}
+* Hausa: {{t|ha|tarnatsa}}
 * Hebrew: {{t+|he|רַעַם|m|tr=ra'am|sc=Hebr}}
 * Hindi: {{t+|hi|गरज|f|sc=Deva}}, {{t+|hi|गड़गड़ाहट|f|sc=Deva}}
 * Hungarian: {{t+|hu|mennydörgés}}, {{t+|hu|égzengés}}
