t+pl:[[bakburta]] ([[WT:EDIT|Assisted]]) <port#47321710>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -182,7 +182,7 @@ From {{etyl|ang|en}} {{m|ang|port}}, from {{etyl|la|en}} {{m|la|portus||port, ha
 * Japanese: {{t|ja|左舷|tr=さげん, sagen}}
 * Maori: {{t|mi|mauī}}
 * Norman: {{t|nrf|babord|m}}
-* Polish: {{t|pl|lewa burta|f}}
+* Polish: {{t|pl|lewa burta|f}}, {{t+|pl|bakburta|f}}
 * Portuguese: {{t+|pt|bombordo|m}}
 * Romanian: {{t+|ro|babord|n}}
 * Russian: {{t|ru|ле́вый борт|m}}
