--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -99,6 +99,7 @@ From {{etyl|frm|en}} {{m|fr|briche}}, {{m|fr|brique||brick}}, probably from a {{
 * German: {{t+|de|Backstein}}, {{t+|de|Ziegel|m}}
 * Greek: {{t+|el|τούβλο|n}}
 * Gujarati: {{t|gu|ઈંટ|f|tr=īṇṭa|sc=Gujr}}
+* Hausa: {{t|ha|tubali}}
 * Hebrew: {{t+|he|לְבֵנָה|f|tr=l'véna|sc=Hebr}}
 * Hindi: {{t+|hi|ईंट|f|sc=Deva}}
 * Hungarian: {{t+|hu|tégla}}
