--- a/en/偏/偏.11103.wikitext
+++ b/en/偏/偏.11103.wikitext
@@ -51,8 +51,8 @@
 ====Readings====
 {{ja-readings
 |on=へん
-|kun=かたよ-る, ひとえに-, ひとえ-に
-}}{{attention|ja|Had odd input: -る and -に in kun parameter.}}
+|kun=かたよ-る, ひとえ-に
+}}
 
 ====Compounds====
 {{der-top}}
