/* Readings */ {{ja-readings}} update <慌#47326602>

--- a/en/慌/慌.15711.wikitext
+++ b/en/慌/慌.15711.wikitext
@@ -54,7 +54,10 @@ Note: The right-middle part could be found as [[亾]] instead of [[亡]].
 # disconcerted
 
 ====Readings====
-* {{ja-readings|on=[[こう]] (kō)|kun=[[あわてる]] (awateru), [[あわただし]] (awatadashi), [[くらい]] (kurai)}}
+{{ja-readings
+|on=こう
+|kun=あわ-てる, あわ-ただし.い, くらい
+}}
 
 ----
 
