/* Readings */ {{ja-readings}} update <愁#47326776>

--- a/en/愁/愁.15637.wikitext
+++ b/en/愁/愁.15637.wikitext
@@ -51,7 +51,12 @@
 # distress
 
 ====Readings====
-* {{ja-readings|goon=[[じゅう]] (jū)|kanon=[[すう]] (sū)|kanyoon=[[しゅう]] (shū)|kun=[[うれい]] (urei), [[うれえる]] (ureeru)}}
+{{ja-readings
+|goon=じゅう
+|kanon=すう
+|kanyoon=しゅう
+|kun=うれ-い, うれ-える
+}}
 
 ----
 
