/* Readings */ {{ja-readings}} update <倫#47326949>

--- a/en/倫/倫.11047.wikitext
+++ b/en/倫/倫.11047.wikitext
@@ -48,7 +48,11 @@
 # ethics
 
 ====Readings====
-* {{ja-readings|goon=[[りん]] (rin)|kanon=[[りん]] (rin)|kun=[[たぐい]] (tagui), [[ついで]] (tsuide), [[みち]] (michi)}}
+{{ja-readings
+|goon=りん
+|kanon=りん
+|kun=たぐい-, つい-で, みち-
+}}
 
 ===Proper noun===
 {{ja-pos|proper|りん}}
