/* Noun */ ## {{lb|en|gymnastics}} A similar position in [[gymnastics]]. -- not just wrestling <bridge#47335749>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -43,6 +43,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 ## {{lb|en|billiards|snooker|pool}} A cue modified with a convex arch-shaped notched head attached to the narrow end, used to support a player's (shooter's) cue for extended or tedious shots. Also called a [[spider]].
 ## Anything supported at the ends and serving to keep some other thing from resting upon the object spanned, as in engraving, watchmaking, etc., or which forms a platform or staging over which something passes or is conveyed.
 ## {{lb|en|wrestling}} A defensive [[position]] in which the [[wrestler]] is supported by his feet and head, belly-up, in order to prevent touch-down of the shoulders and eventually to [[dislodge]] an opponent who has established a position on top.
+## {{lb|en|gymnastics}} A similar position in [[gymnastics]].
 # A connection, real or abstract.
 ## {{lb|en|medicine}} A rudimentary procedure before definite solution
 ##: {{ux|en|ECMO is used as a '''bridge''' to surgery to stabilize the patient.}}
