--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -320,6 +320,9 @@ Borrowed from {{bor|gmh|la|oliva|notext=1}}.
 
 ==Slovak==
 
+===Pronunciation===
+* {{IPA|/ˈɔlivɛ/|lang=sk}}
+
 ===Noun===
 {{head|sk|noun form}}
 
