t+is:[[Bandaríki Norður-Ameríku]] ([[WT:EDIT|Assisted]]) <United States of America#47348440>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -83,7 +83,7 @@
 * Hiligaynon: {{t-needed|hil}}
 * Hindi: {{t|hi|संयुक्त राज्य अमरीका}}, {{t|hi|संयुक्त राष्ट्र अमरीका}}, {{t+|hi|अमेरिका|m|sc=Deva}}
 * Hungarian: {{t+|hu|Amerikai Egyesült Államok}}, {{t+|hu|Egyesült Államok}}, {{t+|hu|USA}}
-* Icelandic: {{t|is|Bandaríka|n}}
+* Icelandic: {{t|is|Bandaríka|n}}, {{t|is|Bandaríki Norður-Ameríku|n}}
 * Indonesian: {{t+|id|Amerika Serikat}}
 * Interlingua: {{t|ia|Statos Unite de America}}
 * Interlingue: {{t|ie|Unit States de America}}
