--- a/en/y/Yugoslavia.2108.wikitext
+++ b/en/y/Yugoslavia.2108.wikitext
@@ -18,7 +18,7 @@
 ====Translations====
 {{trans-top|id=Q36704|former country in the Balkans}}
 * Albanian: {{t|sq|Jugosllavia}}
-* Arabic: {{t|ar|يُوغُسْلَافِيَا|f|tr=yūḡoslāviyā}}
+* Arabic: {{t|ar|يُوغُسْلَافِيَا|f|tr=yūḡoslāviyā}}, {{t|ar|يُوجُوسْلَافِيَا|f|tr=yūgoslāviyā}}
 * Armenian: {{t|hy|Հարավսլավիա}}
 * Azeri: {{t|az|Yuqoslaviya}}
 * Belarusian: {{t|be|Югасла́вія|f}}
