--- a/en/l/libre.1514.wikitext
+++ b/en/l/libre.1514.wikitext
@@ -52,7 +52,7 @@ The pronunciation is near from French one.
 ==French==
 
 ===Etymology===
-From {{inh|fr|fro|-}}, {{bor|fr|la|līber||free|nocap=1}}, from {{der|fr|itc-ola|loeber}}, from {{der|fr|itc-pro|*louðeros}}, from {{der|fr|ine-pro||*h₁lewdʰ-er-os}}, from {{m|ine-pro|*h₁lewdʰ-||people}}.
+From {{inh|fr|fro|-}}, borrowed from {{bor|fr|la|līber||free|notext=1}}, from {{der|fr|itc-ola|loeber}}, from {{der|fr|itc-pro|*louðeros}}, from {{der|fr|ine-pro||*h₁lewdʰ-er-os}}, from {{m|ine-pro|*h₁lewdʰ-||people}}.
 
 ===Pronunciation===
 * {{IPA|/libʁ/|lang=fr}}
@@ -145,7 +145,7 @@ Borrowed from {{bor|hil|es|libre|notext=1}}.
 ==Norman==
 
 ===Etymology===
-From {{inh|nrf|fro|-}}, from {{bor|nrf|la|līber||free|nocap=1}}.
+From {{inh|nrf|fro|-}}, from {{bor|nrf|la|līber||free|notext=1}}.
 
 ===Adjective===
 {{nrf-adj|mf}}
