--- a/en/垠/垠.13092.wikitext
+++ b/en/垠/垠.13092.wikitext
@@ -41,7 +41,8 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=土06}}
 
-# {{defn|lang=ja|sort=土06}}
+# [[limit]]
+# [[boundary]]
 
 ====Readings====
 * {{ja-readings|on=[[ぎん]] (gin), [[ごん]] (gon)|kun=[[さかい]] (sakai), [[きし]] (kishi)}}
