--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -127,7 +127,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Turkmen: {{qualifier|tortoise or turtle}} {{t|tk|pyşbaga}}
 * Ukrainian: {{qualifier|tortoise or turtle}} {{t|uk|черепаха|f|tr=čerepáxa}}
 * Urdu: {{t|ur|کچھوا|m|tr=kachuvā|sc=ur-Arab}} {{qualifier|tortoise or turtle}}
-* Uyghur:
+* Uyghur: {{t|ug|تاشپاقا}}
 *: Cyrillic: {{t|ug|ташпақа|sc=Cyrl}}
 *: Persic: {{t|ug|تاشپاقا|sc=fa-Arab}}
 * Uzbek: {{qualifier|tortoise or turtle}} {{t+|uz|toshbaqa}}
