--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -36,10 +36,10 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Azeri: {{qualifier|tortoise or turtle}} {{t+|az|tısbağa}}
 * Bashkir: {{t|ba|ташбаҡа|sc=Cyrl}}, {{t|ba|гөбөргәйел|sc=Cyrl}}
 * Bau Bidayuh: {{t|sne|diya}}
-* Belarusian: {{qualifier|tortoise or turtle}} {{t|be|чарапаха|f|tr=čarapáxa|sc=Cyrl}}
-* Bengali: {{qualifier|tortoise or turtle}} {{t|bn|কাছিম|tr=kachim|sc=Beng}}
+* Belarusian: {{qualifier|tortoise or turtle}} {{t|be|чарапа́ха|f|sc=Cyrl}}
+* Bengali: {{qualifier|tortoise or turtle}} {{t|bn|কাছিম|sc=Beng}}
 * Breton: {{t+|br|baot|f}}, {{t|br|baoted|p}}, {{t|br|baot douar}}
-* Bulgarian: {{qualifier|tortoise or turtle}} {{t+|bg|костенурка|f|tr=kostenúrka}}
+* Bulgarian: {{qualifier|tortoise or turtle}} {{t+|bg|костену́рка|f}}
 * Burmese: {{qualifier|tortoise or turtle}} {{t+|my|လိပ်|sc=Mymr}}
 * Catalan: {{t+|ca|tortuga|f}}
 * Central Dusun: {{t|dtp|buu}}
@@ -59,7 +59,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * German: {{qualifier|tortoise or turtle}} {{t+|de|Schildkröte|f}}, {{t|de|Landschildkröte|f}}
 * Greek: {{qualifier|tortoise or turtle}} {{t+|el|χελώνα|f}}
 * Hebrew: {{qualifier|tortoise or turtle}} {{t+|he|צב|m|tr=tzav|sc=Hebr}}
-* Hindi: {{t+|hi|कछुआ|m|tr=kachu'ā|sc=Deva}}
+* Hindi: {{t+|hi|कछुआ|m|sc=Deva}}
 * Hungarian: {{t+|hu|teknősbéka}}, {{t+|hu|teknős}}
 * Icelandic: {{t|is|landskjaldbaka|f}}, {{t+|is|skjaldbaka|f}} {{qualifier|tortoise or turtle}}
 * Ido: {{t+|io|tortugo}}
@@ -82,7 +82,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Lithuanian: {{qualifier|tortoise or turtle}} {{t+|lt|vėžlys|m}}
 * Luxembourgish: {{t|lb|Landdeckelsmouk|f}}
 {{trans-mid}}
-* Macedonian: {{qualifier|tortoise or turtle}} {{t|mk|желка|f|tr=žélka}}
+* Macedonian: {{qualifier|tortoise or turtle}} {{t|mk|желка|f}}
 * Malay: {{t|ms|kura-kura}}
 * Malayalam: {{t+|ml|ആമ|sc=Mlym}}
 * Maltese: {{t|mt|fekruna|f}}, {{t|mt|fkieren|p}}
@@ -102,7 +102,7 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Portuguese: {{qualifier|tortoise or turtle}} {{t+|pt|tartaruga|f}}, {{t+|pt|jabuti|m}}, {{t+|pt|cágado}}
 * Romanian: {{t|ro|țestoasă|f}}, {{t|ro|broască țestoasă|f}}
 * Russian: {{qualifier|tortoise or turtle}} {{t+|ru|черепа́ха|f}}
-* Sanskrit: {{t+|sa|कच्छप}}
+* Sanskrit: {{t+|sa|कच्छप|m}}
 * Scottish Gaelic: {{t|gd|crùban-coille|m}}, {{t|gd|sligeanach|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{qualifier|tortoise or turtle}} {{t|sh|корњача|f|sc=Cyrl}}
@@ -125,11 +125,10 @@ From {{etyl|enm|en}} {{m|enm|tortuse}}, {{m|enm|tortuce}}, {{m|enm|tortuge}}, fr
 * Tswana: {{t|tn|khudu|c9|c10}}
 * Turkish: {{t+|tr|kaplumbağa}}, {{t+|tr|tosbağa}}
 * Turkmen: {{qualifier|tortoise or turtle}} {{t|tk|pyşbaga}}
-* Ukrainian: {{qualifier|tortoise or turtle}} {{t|uk|черепаха|f|tr=čerepáxa}}
+* Ukrainian: {{qualifier|tortoise or turtle}} {{t|uk|черепа́ха|f}}
 * Urdu: {{t|ur|کچھوا|m|tr=kachuvā|sc=ur-Arab}} {{qualifier|tortoise or turtle}}
 * Uyghur: {{t|ug|تاشپاقا}}
 *: Cyrillic: {{t|ug|ташпақа|sc=Cyrl}}
-*: Persic: {{t|ug|تاشپاقا|sc=fa-Arab}}
 * Uzbek: {{qualifier|tortoise or turtle}} {{t+|uz|toshbaqa}}
 * Vietnamese: {{qualifier|tortoise or turtle}} {{t+|vi|rùa}}
 * Volapük: {{t|vo|tortug}}
