t+dz:[[ཕརཱནསི]] t-balance ([[WT:EDIT|Assisted]]) <France#47376775>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -74,6 +74,7 @@ Borrowed from {{bor|en|fr|France|notext=1}}, {{der|en|fro|France}}, from {{der|e
 * Danish: {{t+|da|Frankrig}}, {{t|da|Franske Republik}}
 * Dhivehi: {{t|dv|ފަރަންސޭސިވިލާތް}}
 * Dutch: {{t+|nl|Frankrijk|n}}
+* Dzongkha: {{t|dz|ཕརཱནསི་}}
 * East Futuna: {{t|fud|Falani}}
 * Esperanto: {{t+|eo|Francio}}, {{t+|eo|Francujo}}
 * Estonian: {{t+|et|Prantsusmaa}}
@@ -120,8 +121,8 @@ Borrowed from {{bor|en|fr|France|notext=1}}, {{der|en|fro|France}}, from {{der|e
 * Lithuanian: {{t+|lt|Prancūzija}}
 * Livonian: {{t|liv|Prantsūzmō}}
 * Lojban: {{t|jbo|fasygu'e}}
-* Low German: {{t+|nds|Frankriek}}
 {{trans-mid}}
+* Low German: {{t+|nds|Frankriek}}
 * Luhya: {{t|luy|Frans}}
 * Luo: {{t|luo|Frans}}
 * Luxembourgish: {{t+|lb|Frankräich|n}}
