--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -65,8 +65,8 @@ Borrowed from {{bor|en|fr|France|notext=1}}, {{der|en|fro|France}}, from {{der|e
 * Chinese:
 *: Cantonese: {{t|yue|法國|sc=Hani}}, {{t|yue|法国|tr=faat3 gwok3|sc=Hani}}
 *: Mandarin: {{t+|cmn|法國|sc=Hani}}, {{t+|cmn|法国|tr=Fǎguó|sc=Hani}}, {{t+|cmn|法蘭西|sc=Hani}}, {{t+|cmn|法兰西|tr=Fǎlánxī|sc=Hani}}
-*: Min Nan: {{t+|nan|法國|tr=Hoat-kok}}
-*: Teochew: {{t|und|法國|tr=huag8 gog4}}
+*: Min Nan: {{t+|nan|法國}}, {{t+|nan|法国|tr=Hoat-kok}}
+*:: Teochew: {{t|und|法國}}, {{t|und|法国|tr=huag8 gog4}}
 * Cornish: {{t+|kw|Pow Frynk}}
 * Corsican: {{t|co|Francia|f}}
 * Crimean Tatar: {{t|crh|Frenkistan}}
