--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -26,6 +26,7 @@ From {{inh|en|ang|þunor}}, from {{inh|en|gem-pro|*þunraz}}, from {{der|en|ine-
 #* Shakespeare
 #*: The revenging gods / 'Gainst parricides did all their '''thunders''' bend.
 # {{lb|en|figuratively}} The [[spotlight]].
+#: Shortly after I announced my pregnancy, he stole my '''''thunder''''' with his news of landing his dream job.
 
 ====Usage notes====
 * [[roll]], [[clap]], [[peal]] are some of the words used to count thunder.
