--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -20,7 +20,7 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 
 # {{lb|en|intransitive}} To [[contend]] in physical conflict, either singly or in war, battle etc.
 #: {{ux|en|The two boxers have been '''fighting''' for more than half an hour.}}
-#: {{ux|en|A wounded animal will '''fight''' like a maniac.}}
+#: {{ux|en|A wounded animal will '''fight''' like a maniac, relentless, savage and murderous.}}
 # {{lb|en|intransitive}} To [[strive]] for; to campaign or [[contend]] for success.
 #: {{ux|en|He '''fought''' for the Democrats in the last election.}}
 #* {{quote-book|year=1913|author={{w|Joseph C. Lincoln}}|chapter=7
