--- a/en/坰/坰.13043.wikitext
+++ b/en/坰/坰.13043.wikitext
@@ -1,14 +1,11 @@
 {{character info/new}}
 ==Translingual==
 
-===Etymology===
+===Glyph origin===
 {{Han etym}}
 
 ===Han character===
 {{Han char|rn=32|rad=土|as=05|sn=8|four=47120|canj=GBR|ids=⿰土冋}}
-
-# [[wilds]], [[wilderness]]
-# the [[outermost]] [[suburbs]]
 
 ====References====
 * {{Han ref|kx=0226.290|dkj=04985|dj=0462.070|hdz=10432.030|uh=5770|ud=22384|bh=CBF7|bd=52215}}
@@ -16,7 +13,7 @@
 ----
 
 ==Chinese==
-{{zh-forms}}
+{{zh-forms|alt=冂,冋}}
 
 ===Pronunciation===
 {{zh-pron
@@ -31,7 +28,7 @@
 ===Definitions===
 {{zh-hanzi}}
 
-# {{rfdef|lang=zh}}
+# place that is [[faraway]] from the [[city]]
 
 ----
 
