--- a/en/坎/坎.13009.wikitext
+++ b/en/坎/坎.13009.wikitext
@@ -59,7 +59,9 @@
 ===Hanja===
 {{ko-hanja|hangeul=감|rv=gam|mr=kam}}
 
-# {{defn|lang=ko|sort=土04}}
+# [[pit]], [[hole]]
+# [[snare]], [[trap]]
+# [[crisis]]
 
 ----
 
