--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -167,8 +167,8 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Irish: {{t|ga|brat|m}}
 * Italian: {{t+|it|sipario|m}}
 * Japanese: {{t+|ja|幕|tr=[[まく]], maku}}, [[緞帳]] ([[どんちょう]], donchō) with vertical move, [[引き幕]]　([[ひきまく]] hikimaku) with horizontal move
-{{trans-mid}}
 * Macedonian: {{t|mk|кули́са|f}}
+{{trans-mid}}
 * Persian: {{t+|fa|پرده|tr=parde}}
 * Polish: {{t+|pl|kurtyna|f}}
 * Portuguese: {{t+|pt|cortina|f}}
@@ -189,6 +189,7 @@ From {{inh|en|enm|curteyn}}, {{m|enm|corteyn}}, {{m|enm|cortyn}}, {{m|enm|cortin
 * Turkish: {{t+|tr|perde}}
 * Urdu: {{t|ur|پردہ|tr=parda|m}}
 * Walloon: {{t+|wa|toele|f}}
+* Welsh: {{t|cy|llen|f}}
 {{trans-bottom}}
 
 {{checktrans-top}}
