/* Readings */ {{ja-readings}} update <慈#47405146>

--- a/en/慈/慈.15707.wikitext
+++ b/en/慈/慈.15707.wikitext
@@ -45,7 +45,11 @@
 # mercy
 
 ====Readings====
-{{ja-readings|goon=[[じ]] (ji)|kanon=[[し]] (shi)|kun=[[いつくしむ]] (itsukushimu), [[いつくしみ]] (itsukushimi)}}
+{{ja-readings
+|goon=じ
+|kanon=し
+|kun=いつく-しむ, いつくしみ
+}}
 
 ====Compounds====
 * {{ja-r|慈鳥|じちょう}}: [[crow]], [[raven]]
