/* Derived terms */ <play#47408534>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -716,6 +716,7 @@ The noun is from {{etyl|enm|en}} {{m|enm|pleye}}, from {{etyl|ang|en}} {{m|ang|p
 * {{l|en|play in Peoria}}
 * {{l|en|play it by ear}}
 * {{l|en|play it safe}}
+* {{l|en|play it straight}}
 * {{l|en|play lunch}}
 * {{l|en|playmate}}
 * {{l|en|play money}}
