--- a/en/旭/旭.16917.wikitext
+++ b/en/旭/旭.16917.wikitext
@@ -38,6 +38,10 @@
 ===Compounds===
 {{zh-der|旭日東升|旭蟹|智旭|旭日初升|旭旦|旭旭|旭日}}
 
+===Antonyms===
+
+* {{zh-l|夕|tr=xī}} ("setting sun, night")
+
 ----
 
 ==Japanese==
