/* Derived terms */ aka.aka <明#47452882>

--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -120,7 +120,7 @@ Three other forms were found in the oracle bone script:
 * {{ja-r|暁|あかつき}}: dawn, daybreak
 * {{ja-r|明白|あからさま}}: plain, frank, candid
 * {{ja-r|赤|あか}}: red
-* {{ja-r|明々と|あかあか と}}, {{ja-r|赤々と|あかあか と}}: brilliantly, clearly
+* {{ja-r|明々と|あか.あか と}}, {{ja-r|赤々と|あか.あか と}}: brilliantly, clearly
 * {{ja-r|明らか|あきらか}}: obvious, clear, evident
 * {{ja-r|明け|あけ}}: dawn, daybreak
 
