--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -30,7 +30,7 @@ From {{etyl|ang|en}} {{m|ang|port}}, from {{etyl|la|en}} {{m|la|portus||port, ha
 =====Synonyms=====
 * {{sense|place where ships dock}} {{l|en|harbour}}, {{l|en|haven}}
 * {{sense|town or city containing such a place}} {{l|en|harbour city}}, {{l|en|harbour town}}, {{l|en|port city}}
-* {{sense|left-hand side of a vessel}} {{l|en|larboard}}, {{l|en|left}}
+* {{sense|left-hand side of a vessel}} {{l|en|backboard}}, {{l|en|larboard}}, {{l|en|left}}
 
 =====Antonyms=====
 * {{sense|right-hand side of a vessel}} {{l|en|starboard}}
