--- a/en/慟/慟.15731.wikitext
+++ b/en/慟/慟.15731.wikitext
@@ -47,7 +47,11 @@
 # {{defn|lang=ja|sort=心11}}
 
 ====Readings====
-* {{ja-readings|on=[[どう]] (dō), [[とう]] (tō)|kun=[[なげく]] (nageku)}}
+* {{ja-readings
+|goon=ずう
+|kanon=とう
+|kanyoon=どう
+|kun=なげ-く}}
 
 ----
 
