/* Japanese */ historical spelling from Japanese Wiktionary; etymology section for kanjitab <坑#47459973>

--- a/en/坑/坑.13012.wikitext
+++ b/en/坑/坑.13012.wikitext
@@ -48,14 +48,16 @@
 {{ja-kanji|grade=c|rs=土04}}
 
 ====Readings====
-{{ja-kanjitab|こう|yomi=o}}
 {{ja-readings
-|goon=きょう
-|kanon=こう
+|goon=きょう<きやう
+|kanon=こう<かう
 |kun=あな-
 }}
 
-===Noun===
+===Etymology===
+{{ja-kanjitab|こう|yomi=o}}
+
+====Noun====
 {{ja-noun|こう}}
 
 # [[pit]], usually of a mine
