--- a/en/傀/傀.11152.wikitext
+++ b/en/傀/傀.11152.wikitext
@@ -50,7 +50,10 @@
 # {{defn|lang=ja|sort=人10}}
 
 ====Readings====
-* {{ja-readings|goon=[[け]] (ke)|kanon=[[かい]] (kai)|kun=[[おおきい]] (ookii)}}
+* {{ja-readings
+|goon=け<くゑ
+|kanon=かい<くわい
+|kun=お.おき-い}}
 
 ----
 
