--- a/en/偈/偈.11096.wikitext
+++ b/en/偈/偈.11096.wikitext
@@ -89,7 +89,10 @@ Borrowed from {{bor|yue|en|gear|notext=1}}.
 # {{defn|lang=ja|sort=人09}}
 
 ====Readings====
-* {{ja-readings|on=[[けつ]] (ketsu), [[けい]] (kei), [[げ]] (ge)|kun=[[いこう]] (ikou)}}
+* {{ja-readings
+|goon=げ, げち
+|kanon=けい, けつ
+|kun=いこ-う}}
 
 ----
 
