--- a/en/坩/坩.13036.wikitext
+++ b/en/坩/坩.13036.wikitext
@@ -28,7 +28,10 @@
 # {{defn|lang=ja|sort=土05}}
 
 ====Readings====
-* {{ja-readings|on=[[かん]] (kan)|kun=[[つぼ]] (tsubo)}}
+* {{ja-readings
+|goon=かん<かむ
+|kanon=かん<かむ
+|kun=つぼ-}}
 
 ----
 
