/* Readings */ |goon=だ |kanon=た <惰#47474506>

--- a/en/惰/惰.15621.wikitext
+++ b/en/惰/惰.15621.wikitext
@@ -51,7 +51,11 @@
 # lazy
 
 ====Readings====
-* {{ja-readings|on=[[だ]] (da)|kun=[[おこたる]] (okotaru)}}
+{{ja-readings
+|goon=だ
+|kanon=た
+|kun=おこた-る
+}}
 
 ----
 
