t+ext:[[puenti]] ([[WT:EDIT|Assisted]]) <bridge#47475003>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -296,6 +296,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Belarusian: {{t|be|перано́ссе|n|sc=Cyrl}}
 * Czech: {{t+|cs|hřbet|m}}
 * Danish: {{t|da|næseben|n}}
+* Extremaduran: {{t|ext|puenti}}
 * Faroese: {{t|fo|nasabein|n}}
 * Finnish: {{t|fi|nenän selkä}}
 * Georgian: {{t|ka|ძგიდე}}, {{t|ka|კეხი}}
