t+ext:[[puenti]] ([[WT:EDIT|Assisted]]) <bridge#47475005>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -322,6 +322,7 @@ The verb is from {{etyl|enm|en}} {{m|enm|briggen}}, from {{etyl|ang|en}} {{m|ang
 * Catalan: {{t+|ca|pont|m}}
 * Czech: {{t+|cs|můstek|m}}
 * Danish: {{t+|da|bro|c}}
+* Extremaduran: {{t|ext|puenti}}
 * Faroese: {{t|fo|brúgv|f}}
 * Finnish: {{t+|fi|silta}}, {{t+|fi|hammassilta}}
 * French: {{t+|fr|bridge|m}}, {{qualifier|Canada}} {{t+|fr|pont|m}}
