t+pt:[[recortar]] t-balance ([[WT:EDIT|Assisted]]) <cut#47476101>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -675,8 +675,9 @@ From {{etyl|enm|en}} {{m|enm|cutten}}, {{m|enm|kitten}}, {{m|enm|kytten}}, {{m|e
 {{trans-top|to remove and place in memory}}
 * Catalan: {{t+|ca|retallar}}
 * Dutch: {{t+|nl|knippen}}
-{{trans-mid}}
 * Greek: {{t+|el|αποκοπή|f|sc=Grek}}
+{{trans-mid}}
+* Portuguese: {{t+|pt|recortar}}
 * Scottish Gaelic: {{t|gd|geàrr}}
 {{trans-bottom}}
 
