/* Readings */ updated [[T:ja-readings]] using [[Module:User:Suzukaze-c/02]], with the help of [[User:Erutuon/scripts/cleanup.js|JavaScript]] <是#47476208>

--- a/en/是/是.16983.wikitext
+++ b/en/是/是.16983.wikitext
@@ -109,7 +109,12 @@ A way to use {{lang|zh|是}} with an adjective is to use {{zh-l|的|tr=de}} afte
 # justice, right
 
 ====Readings====
-* {{ja-readings|goon=[[ぜ]] (ze)|nanori=[[これ]] (kore), [[すなお]] (sunao), [[ただし]] (tadashi), [[つな]] (tsuna), [[ゆき]] (yuki), [[よし]] (yoshi)|kanon=[[し]] (shi)|kun=[[これ]] (kore), [[この]] (kono), [[ここ]] (koko)}}
+{{ja-readings
+|goon=ぜ
+|kanon=し
+|kun=これ-, この-, ここ-
+|nanori=これ, すなお, ただし, つな, ゆき, よし
+}}
 
 ----
 
