--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -487,13 +487,10 @@ Cognate to French {{m|fr|comme}}. See also Spanish {{m|es|como}}/{{m|es|cómo}} 
 {{head|it|adverb}}
 
 # [[how]]
-#: ''[[come stai|'''Come''' stai]]?'' {{qualifier|informal}}
-#:: [[how are you|'''How''' are you]]?
-#: ''[[come sta|'''Come''' sta]]?'' {{qualifier|formal}}
-#:: [[how are you|'''How''' are you]]?
+#: {{uxi|it|'''Come''' stai?|'''How''' are you? (informal)}}
+#: {{uxi|it|'''Come''' sta?|'''How''' are you? (formal)}}
 # [[as]], [[like]]
-#: ''Blu '''come''' il mare,''
-#:: As blue '''as''' the sea.
+#: {{uxi|it|blu '''come''' il mare|as blue '''as''' the sea}}
 # [[such as]]
 
 ====Derived terms====
