--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -481,7 +481,7 @@ The meaning of ''semen or female ejaculatory discharge'' is considered rude slan
 
 ===Etymology===
 From {{inh|it|VL.|*quomo}} (from {{inh|it|la|quomōdo}}) + {{m|la|et}}.
-Cognate to French {{m|fr|comme}}. See also Spanish {{m|es|como}}/{{m|es|cómo}} and Catalan {{m|ca|com}}.
+Cognate to {{cog|fr|comme}}. See also {{cog|es|como}}/{{m|es|cómo}} and {{cog|ca|com}}.
 
 ===Adverb===
 {{head|it|adverb}}
