--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -536,3 +536,4 @@ The noun is from {{etyl|ang|en}} {{m|ang|feoht}}, from the verb; compare Dutch {
 [[Category:English basic words]]
 [[Category:English irregular verbs]]
 [[Category:English reciprocal verbs]]
+[[Category:English class 3 strong verbs]]
