/* Derived terms */ <catch#47490792>

--- a/en/c/catch.6830.wikitext
+++ b/en/c/catch.6830.wikitext
@@ -98,6 +98,7 @@ Noah Webster's ''American Dictionary'' (1828) regards /kɛtʃ/ as the "popular o
 |{{l|en|catch fence}}
 |{{l|en|catchful}}
 |{{l|en|catch of the day}}
+|{{l|en|catch one's death}}
 |{{l|en|catch some rays}}
 |{{l|en|catchy}}|{{l|en|crowd catch}}
 }}
