/* Readings */ {{ja-readings}} update, remove kun readings that seem unlikely(?) <惣#47523686>

--- a/en/惣/惣.15608.wikitext
+++ b/en/惣/惣.15608.wikitext
@@ -22,7 +22,10 @@
 # {{defn|lang=ja|sort=心08}}
 
 ====Readings====
-* {{ja-readings|on=[[そう]] (sō)|kun=[[いそがしい]] (isogashii), [[そうじて]] (sōjite)}}
+{{ja-readings
+|on=そう
+|kun=
+}}
 
 ----
 
