t+sco:[[Fraunce]] ([[WT:EDIT|Assisted]]) <France#47523983>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -165,7 +165,7 @@ Borrowed from {{bor|en|fr|France|notext=1}}, {{der|en|fro|France}}, from {{der|e
 * Sanskrit: {{t|sa|फ्रांस}}
 * Sardinian: {{t|sc|Frantza}}
 * Saterland Frisian: {{t|stq|Frankriek}}
-* Scots: {{t|sco|Franse}}
+* Scots: {{t|sco|Franse}}, {{t|sco|Fraunce}}
 * Scottish Gaelic: {{t|gd|Fraing|alt=An Fhraing|f}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Француска|f|sc=Cyrl}}
