--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -60,7 +60,7 @@ From {{inh|fr|fro|chose}}, from {{der|fr|la|causa}}. Compare {{cog|it|cosa}}, {{
 #*:: The Agrigentines had a common use solemnly to inter the beasts they had a kindness for, as horses of some rare quality, dogs, and useful birds, and even those that had only been kept to divert their children; and the magnificence that was ordinary with them in all other '''things''', also particularly appeared in the sumptuosity and numbers of monuments erected to this end, and which remained in their beauty several ages after.
 
 ====Descendants====
-* {{desc|de|Chose}}
+* {{desc|de|Chose|bor=1}}
 
 ===Anagrams===
 * {{l|fr|échos}}
