t+ady:[[Исраил]] ([[WT:EDIT|Assisted]]) <Israel#47528474>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -58,6 +58,7 @@ From {{etyl|enm|en}} {{m|enm|Israel}}, from {{etyl|ang|en}}, borrowed from {{ety
 
 ====Translations====
 {{trans-top|id=Q801|the state}}
+* Adyghe: {{t|ady|Исраил}}
 * Albanian: {{t|sq|Izrael}}
 * Amharic: {{t|am|እስራኤል|sc=Ethi}}
 * Arabic: {{t+|ar|إِسْرَائِيل|f}}
