/* Readings */ {{ja-readings}} update <旦#47530715>

--- a/en/旦/旦.16910.wikitext
+++ b/en/旦/旦.16910.wikitext
@@ -58,10 +58,10 @@
 
 ====Readings====
 {{ja-readings
-|goon=[[たん]] (tan), [[だん]] (dan)
-|kanon=[[たん]] (tan)
-|kun=[[あした]] (ashita)
-|nanori=[[あき]] (aki), [[あきら]] (akira), [[あけ]] (ake), [[あさ]] (asa), [[ただし]] (tadashi)
+|goon=たん, だん
+|kanon=たん
+|kun=あした-
+|nanori=あき, あきら, あけ, あさ, ただし
 }}
 
 ====Compounds====
