/* Readings */ {{ja-readings}} update <態#47530746>

--- a/en/態/態.15710.wikitext
+++ b/en/態/態.15710.wikitext
@@ -51,7 +51,11 @@
 {{ja-kanji|grade=5|rs=心10}}
 
 ====Readings====
-* {{ja-readings|goon=[[たい]] (tai)|kanon=[[たい]] (tai)|kun=[[さま]] (sama), [[わざと]] (wazato)}}
+{{ja-readings
+|goon=たい
+|kanon=たい
+|kun=さま-, わざ-と
+}}
 
 ===Noun===
 {{ja-noun|たい}}
