/* Readings */ {{ja-readings}} update <偵#47530774>

--- a/en/偵/偵.11141.wikitext
+++ b/en/偵/偵.11141.wikitext
@@ -43,10 +43,11 @@
 # [[investigation]], [[spy]], [[detective]]
 
 ====Readings====
-* {{ja-readings
+{{ja-readings
 |goon=ちょう
 |kanon=てい
-|kun=[[うかがう]] (ukagau)}}
+|kun=うかが-う
+}}
 
 ====Compounds====
 * [[偵察]]
