exempli gratia is indeed Latin, quite obvious but correct information which might be useful <e.g.#47538544>

--- a/en/e/e_g_.7210.wikitext
+++ b/en/e/e_g_.7210.wikitext
@@ -90,7 +90,7 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 ===Noun===
 {{en-noun|?}}
 
-# {{lb|en|informal}} misuse of the abbreviation "e.g." (exempli gratia, for example) as a pseudo-abbreviation of "example"
+# {{lb|en|informal}} misuse of the abbreviation "e.g." (Lat. exempli gratia, for example) as a pseudo-abbreviation of "example"
 #: ''Lemurs are an '''e.g.''' of a non-simian primate.''
 
 ===Anagrams===
@@ -104,7 +104,7 @@ A terser form of {{m|en|ex. gr.}}, both abbreviating {{der|en|la|exemplī grāti
 ==Latin==
 
 ===Alternative forms===
-* [[e. g.]]
+* {{l|la|e. g.}}
 
 ===Abbreviation===
 {{rfc-header|Abbreviation}}
